공부한거추가

--- a/스터디/토비의스프링/토비의 스프링2.md
+++ b/스터디/토비의스프링/토비의 스프링2.md
@@ -87,9 +87,9 @@
       - 컨테이너가 종료될때 호출. 빈이 사용한 리소스 반환하거나 종료전에 진행
       - @PreDestory
   - 빈의 종류
-    - 애플리케이션 로직 빈 : 비지니스 로직, 서비스 오브젝트 , DAO..
-    - 애플리케이션 인프라 빈 : 대개 스프링에서 제공하는 추상화 되어있는 빈.. 직접 로직작성은 안하고 애플리케이션 로직 빈에 영향을 주는 빈. 기술API도 여기 속함 ex) 트랜잭션, DataSource
-    - 컨테이너 인프라 빈 : 스프링 컨테이너 기능을 확장해서 빈의 등록과 생성, 관계설정, 초기화 등의 작업에 참여하는 빈 ex) AOP
+    - 애플리케이션 로직 빈(0) : 비지니스 로직, 서비스 오브젝트 , DAO..
+    - 애플리케이션 인프라 빈(0) : 대개 스프링에서 제공하는 추상화 되어있는 빈.. 직접 로직작성은 안하고 애플리케이션 로직 빈에 영향을 주는 빈. 기술API도 여기 속함 ex) 트랜잭션, DataSource
+    - 컨테이너 인프라 빈(2) : 스프링 컨테이너 기능을 확장해서 빈의 등록과 생성, 관계설정, 초기화 등의 작업에 참여하는 빈 ex) AOP
       - 빈 후처리기 구현체들이 여기에 속하겠지.. (ex. \<context:component-scan\> 설정했을때 생성되는 빈들)
   - 런타임환경과 프로파일
     - 환경에 따라 설정파일 외에도 등록하는 빈이 달라져야 할때가 있는데, 지정한 프로파일에 따라 빈이 생성될수 있도록 가능!
@@ -370,7 +370,7 @@
             - Handler Mapping을 통해서 찾은 컨트롤러를 실행시켜주는 역할
             - 여러 핸들러 매핑을 이용해서 하나의 어댑터를 통해 컨트롤러를 호출하기도하고
             - 하나의 핸들러 매핑이 여러개의 어댑터를 통해 컨트롤러 호출하기도하고
-            - 핸들러 매핑과 어댑터가 한가지 컨트롤러에만 적용되기도함(DefaultAnnotationHandlerMapping(spring 3.2 이상부터 RequestMappingHandlerMapping) 에 의해 핸들러 결정되고, AnnotationMethodHandlerAdapter(spring 3.2 이상부터 RequestMappingHandlerAdapter)에 의해 핸들러 호출)
+            - 핸들러 매핑과 어댑터가 한가지 컨트롤러에만 적용되기도함(DefaultAnnotationHandlerMapping(spring 3.1 이상부터 RequestMappingHandlerMapping) 에 의해 핸들러 결정되고, AnnotationMethodHandlerAdapter(spring 3.1 이상부터 RequestMappingHandlerAdapter)에 의해 핸들러 호출)
           - HandlerExceptionResolver
             - 예외가 발생했을때 이를 처리하는 로직을 가진 전략 오브젝트
           - ViewResolver
@@ -381,6 +381,7 @@
           - RequestToViewNameTranslator
             - 컨트롤러에서 뷰 이름이나 뷰 오브젝트를 제공해주지 않았을 경우(ModelAndView에서 view 빠져잇을때) URL과 같은 요청정보를 참고해서 자동으로 뷰이름을 생성해주는 전략
             - 이를 기반으로 관례를 잘 사용하면 뷰와 자동으로 매핑시켜줄수있음
+            - /hello 라고 요청이들어왔따면, hello 라는 뷰이름으로.. /admin/user.do 라면 admin/user 라는 뷰이름으로 넘어감
           - *DispatcherServlet은 서블릿 컨테이너가 생성하고 관리하는 오브젝트이지, 스프링의 컨텍스트에서 관리하는 빈 오브젝트가 아님..! DispatcherServlet에 바로 DI해줄수는 없지만, DispatcherServlet은 서블릿 웹 애플리케이션 컨텍스트를 가지고있기때문에 이를 가지고 사용하는것임
           - **DispatcherServlet에 적용할 전략을 선택하고 필요에 따라 확장하거나 다른 방식으로 동작하도록 설정해주는것이 스프링 MVC를 바르게 사용하는 첫걸음!
   - 컨트롤러(Controller)
@@ -397,11 +398,11 @@
         - 스프링3.0 에서 어노테이션과 관례를 이용한 컨트롤러 나오기전까지는 이거를 많이 썻다함
         - 탬플릿 메소드 패턴을 활용하면, 세부 컨트롤러 구현체를 간결하게 해주고, 테스트도 용이!
           - Map으로 파라미터 전달받고, Model정보를 map에 셋팅해서 넘겨주는 로직들이 이를 통해서 가능!
-      - AnnotationMethodHandlerAdapter(스프링 3.2 이상 RequestMappingHandlerAdapter)
+      - AnnotationMethodHandlerAdapter(스프링 3.1 이상 RequestMappingHandlerAdapter)
         - 다른 핸들러 어뎁터와 같은경우에 반드시 특정 인터페이스를 구현한 컨트롤러만을 지원하는데, 이는 지원하는 컨트롤러의 타입이 정해져 있지 않음!
         - 대신 클래스와 메소드에 애노테이션의 정보와 메소드이름, 파리미터, 리턴타입에 대한 "규칙" 등을 종합적으로 분석해서 컨트롤러를 선별하고 호출방식을 결정!
         - URL의 매핑을 컨트롤러 단위가 아니라, 메소드 단위로 가능하게했음!
-        - DefaultAnnotationHandlerMapping(스프링3.2 이상 RequestMappingHandlerMapping) 핸들러 매핑과 함께 사용됨
+        - DefaultAnnotationHandlerMapping(스프링3.1 이상 RequestMappingHandlerMapping) 핸들러 매핑과 함께 사용됨
         - 규칙과 관례를 잘 기억해야함!
     - 핸들러 매핑
       - HTTP 요청 정보를 이용해서 세부 컨트롤러를 찾아주는 기능을 가진 DispatcherServlet의 전략
@@ -419,7 +420,7 @@
           - 클래스 이름을 기반으로 찾음.
         - SimpleUrlHandlerMapping
           - 프로퍼티에 매핑정보를 저장하면 이를 반으로 찾아줌
-        - DefaultAnnotationHandlerMapping(디폴트, 스프링 3.2 이상 RequestMappingHandlerMapping 변경)
+        - DefaultAnnotationHandlerMapping(디폴트, 스프링 3.1 이상 RequestMappingHandlerMapping 변경)
           - @RequestMapping이라는 어노테이션을 컨트롤러 "클래스"나 "메소드"에 직접 부여하고 이를 기반으로 찾아줌
           - 단지 URL뿐 아니라, GET/POST와 같은 HTTP메소드, 심지어 파라미터와 HTTP 헤더정보까지 매핑에 활용가능
         - 기타 공통 설정정보
@@ -623,3 +624,10 @@
       - 초기화 이벤트, 종료이벤트때 적절한 동작이 일어나도록해줌 (ex. 종료 이벤트시 자원해제)
     - WebApplicationInitializer 를 사용하여 web.xml과 xx-servlet.xml 모든 설정을 다 java로 변경할수있음(스프링 3.1 + 서블릿3.0)
       - [정리굿](https://joont92.github.io/spring/WebApplicationInitializer/)
+
+
+
+- [validation 관련 설명 굿](https://jyami.tistory.com/55)
+
+- RequestMapping에서 produces 로 요청조건을 주면 client에서 요청시 Accept 헤더에 요청 조건에 맞는 값을 넘겨주어야한다
+  - ex. produces= application/json 이라면, curl로 전송할때 curl -i -H "Accept: application/json" url.. 이런식으로 요청해야한다!
