공부한거추가

--- a/스터디/토비의스프링/토비의 스프링2.md
+++ b/스터디/토비의스프링/토비의 스프링2.md
@@ -625,6 +625,237 @@
     - WebApplicationInitializer 를 사용하여 web.xml과 xx-servlet.xml 모든 설정을 다 java로 변경할수있음(스프링 3.1 + 서블릿3.0)
       - [정리굿](https://joont92.github.io/spring/WebApplicationInitializer/)
 
+- 4장 스프링 @MVC
+  - @RequestMapping 핸들러 매핑
+    - 핸들러 매핑과 핸들러 어댑터의 대상이 오브젝트가 아니라, ***메소드***!
+    - 타입레벨(클래스, 인터페이스)의 @RequestMapping을 기준으로 메소드레벨의 @RequestMapping으로 구체화
+      - 메소드 레벨에서 참조할 공통정보를 타입레벨의 RequestMapping으로 빼는게좋음
+    - 엘리먼트 종류
+      - String[] value() : URL 패턴(ANT 스타일 가능)
+        - @RequestMapping("/admin/**/user) : admin/a/user , admin/a/b/user, admin/a/b/c/user 다 가능
+        - {} (중괄호) 를 사용가능하며, path variable 이라고 부른다. 하나 이상 등록가능. ex) @RequestMapping("user/{userId}")
+        - 디폴트 접미어 패턴 적용
+          - @RequestMapping("/hello") 라고 선언하면, /hello, /hello/, /hello.* 과 같음(이는 디폴트값으로, 변경가능)
+        - 배열이므로 하나이상 가능
+      - RequestMethod[] method() : HTTP 요청메소드
+        - RequestMethod는 HTTP 메소드를 정의한 enum
+        - 같은 URL인데, 지정한 메소드와 다르게 요청이들어오면 HTTP405 Method Not Allowed 응답줌
+        - URL을 타입레벨에서 지정했고 이를 그대로 활용할것이라면 메소드레벨에서 RequestMethod만 지정해도 괜춘
+        - @RequestMapping(method=RequestMethod.GET)
+      - String[] params() : 요청파라미터
+        - 요청의 파라미터와 비교해서 매핑
+        - 조건이 충족되는게 2개 이상일때, 구분이 좀 더 상세하게 되어있는걸로 매핑
+        - "!" 이거 파라미터 앞에 붙여주면, 해당 파라미터 없는 경우만 매핑
+      - String[] headers() : HTTP 헤더 (3.1이상부터는 Content-Type과 Accept는 따로 분리됨)
+        - HTTP 헤더 정보
+        - "헤더이름=값" 형식으로 사용
+          - ex. @RequestMapping(value="/view", headers="content-type=text/*)
+    - @RequestMapping은 상속이되고, 오버라이딩된다!
+      - 원래는 어노테이션이 상속이 되는 개념은 아니지만, 스프링에서 그렇게 사용되도록 만든것!
+      - 재정의를 하면, 상위클래스에 선언된 어노테이션은 아예무시.. 어노테이션의 특정 엘리먼트 재정의안한것들은 유지되는개념아님
+      - 메소드 오버라이딩시 빈@RequestMapping 사용하면 상위 메소드가 실행.. 즉, 오버라이딩 안먹음
+    - 제네릭을 활용하면 공통적으로 반복되어 쓰이는 로직들을 쉽게 사용가능
+      - ![](./genericController.jpeg)
+      - 위의 내용을 상속받으면 controlelr에서 반복적으로 사용되는것들을 Generic만 적절하게 지정해주면 사용가능
+      - 물론 이를 사용하기위해서 service단에서 메소드 호출관련해서 규칙이있어야할것
+      - 상속받은 타입레벨의 url을 잘 지정할것
+  - @Controller
+    - HandlerMapping을 통해서 적절한 컨트롤러를 찾으면, HandlerAdpater로 컨트롤러를 실행시킨다
+    - @MVC에서는 관례를 따라 선언된 애노테이션을 기준으로 많은 동작들이 수행된다.. 그래서 어뎁터핸들러도 상당히 복잡
+    - 여기서는 AnnotationMethodHandlerAdapter(RequestMappingHandlerAdpater)가 허용하는 메소드 파리머터의 종류, 사용방법, 리턴값의 종류등을 알아보는것
+    - 메소드 파라미터의 종류
+      - 아래 종류는 메소드 파라미터로 자유롭게 사용가능(단, 몇 가지 파라미터는 사용방법상의 제약이 있음)
+      - 스프링은 파라미터의 타입,이름, 애노테이션 정보를 기반으로 맞는 파라미터 값을 제공
+      - HttpServletRequest, HttpServletResponse
+        - ServletRequest, ServletResponse도 가능
+      - HttpSession
+        - 멀티스레드 환경에서 안전 보장안됨
+      - WebRequest, NativeWebRequest
+        - 서블릿과 포틀릿 모두 사용가능하게 하기위해서 만들어진것이라함.. 안씀
+      - Locale
+        - Locale Resolver가 결정한 Locale 오브젝트르 받을수 있음
+      - @PathVariable
+        - RequestMapping에서 URL에 {}로 들어가는 패스변수를 받음
+        - URL에 쿼리스트링으로 파라미터를 보내지않고 URL 패스로 쓰면 이걸 사용
+        - 여러개 가능하고 {id} 라면 @PathVariable에 id를 지정해야 받을수있음
+        - 변환 타입 안맞으면 400 bad request error 뜸
+      - @RequestParam
+        - 단일 HTTP 요청 파라미터를 메소드 파라미터에 넣어주는 애노테이션
+        - 하나 이상의 파라미터에 적용가능
+        - 스프링의 내장 변환기가 다룰수있는 모든 타입을 지원
+        - @RequestParam을 사용했다면, 해당 파라미터가 반드시 있어야하는게 디폴트값(없으면 400 bad request 에러)
+          - required 엘리먼트를 false로 하면 에러안뜸
+          - defaultValue라는 엘리먼트를 사용해 해당 파라미터 없을때 default값 설정가능
+        - 메소드 파라미터 이름과 요청파라미터의 이름이 일치하면 생략가능
+          - ex. public String view(@RequestParam int id){..} //요청 파라미터 이름이 id
+      - @CookieValue
+        - 전달받은 쿠키값을 메소드 파라미터에 넣어줄수있음
+      - @RequestHeader
+        - 요청 헤더 정보를 메소드 파라미터에 넣어주는 애노테이션
+        - ex. public void header(@RequestHeader("Keep-Alive") long keepAlive){..}   
+      - Map, Model, ModelMap
+        - 모델정보 담는 오브젝트
+        - Model과 ModelMap에는 addAttribute라는 함수가 잇는데, 해당 함수로 오브젝트만 넘겨주게되면, 해당 오브젝트의 타입이름을 기준으로 model의 이름을 정해준다
+          - ex. User 타입인 user를 model.addAttribute(user) 로 넣게되면, addAttribute("user",user) 와 동일하다
+            - 참고로 ***타입***을 기준으로 이름을 만든다!(User 클래스이기때문에 user라는 이름이 들어간것!)
+      - @ModelAttribute
+        - 메소드 파라미터 레벨에서 사용할때
+          - URL 쿼리 스트링, 또는 폼데이터(Post의 body로 넘어오는..) 를 오브젝트에 바인딩해서 컨트롤러에 전달 + 모델에 자동으로 등록(타입의 이름이 모델의 key값으로 들어감)
+            - ModelAttribute 는 이름에서도 알 수 있듯이 view에서 보여주는 정보가 담긴 모델에 들어가는 값인데, 사용자가 요청한 데이터를 일회성이 아니라 수정하거나 혹은 다시 돌려줘야할때 @ModelAttribute를 사용!!
+          - 생략 가능하긴하나, 여러 파라미터들을 받아야한다면, 각 파라미터들에 애노테이션을 달아줄것!
+            - ex. public void test(@ModelAttribute User user, @RequestParam id ...)
+        - 메소드 레벨에서 사용할때
+          - 항상 Model에 추가해야할 내용이 있다면, 메소드 레벨에서 선언하고 추가하면 된다
+            - ex. selectbox에서 사용하는 값들..
+      - Errors, BindingResult
+        - @ModelAttribute와 같이 요청 파라미터들의 값들을 바인딩 해줄때, 에러가 발생하면 Errors나 BindingResult에 담긴다
+          - Errors나 BindingResult는 ***@ModelAttribute 뒤에 파라미터***로 지정하면됨
+          - 이를 통해서 입력폼과 같은 검증이 필요한 데이터가 잘못 넘어올 경우, 다시 작성하라고 깔끔하게 응답해줄수있음
+          - 이걸로 잡지않으면 지저분한 에러를 응답값으로 반환
+            - @RequestParam 같은 요청 파라미터값을 지정한 타입에 맞추어, 타입변환하고 값을 셋팅하는 과정에서 에러가 발생하면 이는 그냥 400번 에러(bad request error)가 리턴됨
+            - RequestParam은 프로퍼티 타입으로 변환해서 값을 넣을때 별도의 검증과정이 없기때문에 변환이 안되면 바로 에러가 발생하나, ModelAttribte는 타입변환 외에도 다양한 검증작업이 진행되며 타입이 일치하지않는다는건 검증 작업의 한가지 결과일뿐이지, 예상치 못한 예외는 아니기때문! 이러한 검증에서 문제됐다고해서 400에러화면뿌리면 사용자입장에서는 개어이.. 그래서 BindingResult로 에러를 받게되면 정상적으로 처리됨.. 즉, 별도의 분기처리가 필요하다!
+      - SessionStatus
+        - 컨트롤러가 제공하는 기능중에 모델 오브젝트를 세션에 저장했다가 다음 페이지에 다시 활용하도록 해주는 기능있다. 이 기능을 사용하다가 더 이상 세션 내에 모델 오브젝트를 저장할 피룡가 없을 경우네느 코드에서 직접 작업 완료 메소드를 호출해서 세션안에 저장된 오브젝트르 제거해줘야하는데, 그때 필요한 오브젝트!
+        - 세션안에 불필요한 오브젝트를 방지하는것은 메모리누수를 막기위함
+      - @RequestBody
+        - Http 요청의 ***본문이 그대로 전달!***
+        - XML or JSON에 유용하게 사용가능
+        - @RequestBody가 붙어있으면 HTTP 요청의 미디어 타입과 파라미터의 타입을 먼저 확인하여, 메시지 변환기(xxxConverter)들 해당 미디어타입과 파라미터 타입을 처리할수있는 것이 있따면, 본문 부분을 변환해서 컨트롤러에 전달
+          - 대표적인게 json 변환해주는 converter가 있음
+      - @Value
+        - 빈의 값 주입에서 사용하는 @Value 애노테이션도 컨트롤러 메소드 파라미터에 부여할수있음
+        - 사용방법은 동일.
+        - SpEL 을 이용하여 시스템 프로퍼티나 빈의 프로퍼티값 등을 가져올수있음
+          - 근데 이렇게 메소드 파라미터로 가져올거면 그냥 전역변수에 셋팅해서 가져오는게 날듯함
+      - @Valid
+        - JSR-303의 빈 검증기를 이용해서 모델 오브젝트 검증
+        - 애노테이션을 지정하여 사용가능
+          - ex) @Max(100) int a ..
+        - ModelAttribute와 함께 사용함(requestBody에도 사용가능)
+    - 리턴 타입의 종류
+      - *자동추가 모델 오브젝트와 자동생성 뷰 이름
+        - @ModelAttribute 모델 오브젝트
+        ```java
+          public void add(@ModelAttribute("user") User user);
+          public void add(@ModelAttribute User user);
+          public void add(User user);
+
+          //위의 3가지는 동일하게 "user"라는 이름으로 user 오브젝트가 모델에 추가됨
+        ```
+        - Map, Model, ModelMap
+          - 이것들을 파라미터로 받아서 넣는 값들은 다 추가됨
+        - @ModelAttribute **메소드**
+          - 모델에 자동으로 등록됨
+          - 컨트롤러에서 해당 메소드 끝나면 자동으로 추가됨
+          - 여기에 @RequestMapping 붙이는 어리석은 짓 하지말것!
+          - 같은 클래스 내의 모든 컨트롤러 메소드에서 공통적으로 활용하는 정보라면 이를 활용하는것이 좋음
+          - 하나의 컨트롤러에서 하나 이상 지정가능(당연.. key만 다르다면..)
+        - BindingResult
+          - BindingResult 타입의 오브젝트도 모델에 자동으로 추가됨
+          - 핸들러 인터셉터를 통해서 바인딩 결과를 로킹하거나 분석할때 사용가능
+        - 뷰 이름 없으면 RequestToViewNameTranslator 전략에 의해 자동으로 뷰 이름 생성됨(url 요청정보활용)
+      - ModelAndView
+        - ModelAndView를 만들어 리턴하는 경우에도, @ModelAttribute 모델과 Map/Model/ModelMap 파라미터 모델, @ModelAttribute 메소드가 리턴하는 모델이 있다면 자동으로 등록된다!!!@#!@#
+      - String
+        - 뷰 이름으로 사용됨
+      - void
+        - RequestToViewNameTranslator 전략을 통해 자동생성되는 뷰 이름이 사용
+      - 모델 오브젝트
+        - 스프링은 단순 오브젝트가 리턴으로 넘어오면 모델 오브젝트로 인식해서 모델에 자동으로 추가해준다. 이때, 모델 이름은 리턴값 ***타입의 이름***!
+      - Map/Model/ModelMap
+        - dao 결과로 Map을 리턴받는경우, 이를 바로 컨트롤러에서 리턴해줘버리면안됨.. 모델에 따로 dao에서 리턴받은 map을 "등록"해줘야함! ex. modelMap.put("daoRsltMap",daoResltMap)
+        - 그래서 Map타입의 단일 오브젝트 리턴은 피하는게 좋음
+      - View
+        - 뷰 오브젝트 바로 리턴
+      - @ResponseBody
+        - 메세지 컨버터를 통해 바로 HTTP 응답 메세지의 본문으로 전환(HttpServletResponse의 출력스트림에 넣어버림)
+        - 뷰를 사용하지않으니, 리턴값을 모델로 사용x
+        - 해당 애노테이션 없는데, 리턴이 스트링일 경우 뷰 이름으로 인식
+    - @SessionAttribute와 SessionStatus
+      - @SessionAttribute는 session에 저장할수있도록 해준다
+        - @SessionAttribute("user") 와 같이 타입레벨에 선언하게되면, 컨트롤러 메소드가 생성하는 모델정보중에 user라는게 있다면 이를 저장해줌
+        - 그리고 controller에서 요청이 들어왔을때 user라는 이름의 model값을 찾아보고 있으면 이를 돌려주고, 없으면 새로 만들게된다
+        - 여기서 세션에 등록되어있던게 있다면 파라미터로 새로이 넘어온 값들만 갱신하여 @ModelAttribute로 선언된 객체에 바인딩해준다
+        - 하나 이상의 모델을 지정가능
+      - SessionStatus를 통해서 @SessionAttribute에 의해 저장된 오브젝트를 지우도록한다
+        - @SessionAttribute를 사용한다면 항상 같이 사용하고있는지 확인이 필요!
+        - 파라미터로 SessionStatus 받아서 setComplete 함수 실행
+      - *참고로 세션을 저장하는 방법은 변경할수있다(redis와 같은 nosql을 사용하도록 변경 또한 가능)
+    - 모델 바인딩과 검증
+      - 크게 3가지 작업으로 진행
+        1. 오브젝트 만듦(세션에 저장된값 있으면 그거 가져옴)
+        2. 요청파라미터를 바인딩
+           1. 프로퍼티 타입에 맞추어 잘 변환하고
+           2. 수정자 메소드 호출해서 값을 넣음
+        3. 검증
+      - 바인딩 과정에서 변환 작업을 위한 API
+        - PropertyEditor
+          - 프로퍼티 타입에 맞는 적절한 PropertyEditor가 자동으로 선정돼서 사용됨(ex.CharsetEditor)
+          - 이를 위해 사용하는 메소드는 총 4개
+            - setAsText : 스트링 타입의 문자열넣고
+            - getValue : 변환된 오브젝트 가져옴
+            - setValue : 변환된 오브젝트를 다시 문자열로 바꿀때 여기넣고
+            - getAsText : setValue에 넣은 오브젝트를 문자열을 가져옴
+            - => 여기서 중요한것은 어딘가에 변환된 오브젝트나 문자열을 저장하기때문에, 멀티스레드에서는 사용하기가 어렵다는 단점이있음
+          - @InitBinder
+            - 디폴트로 등록되어있는것 외에 커스텀한 프로퍼티 에디터 추가할때 사용
+            - 적용해야하는 ***컨트롤러***안에서 사용 (다른 컨트롤러 당연 적용x)
+            - 변환 타입이 없을때 새로이 등록하는 것과, 기존 변환 타입이 있지만 구체적으로 특정조건에서 조작이나 변경이 필요한 경우에도 사용가능!!(즉, 같은 타입 변환이더라도 특정 프로퍼티를 지정해서 해당 프로퍼티에는 우선적으로 커스텀한 타입변환이 이루어질수있도록 할수있음) 후자는 우선순위 매겨서 처리됨(커스텀한게 우선순위 높음)
+            - 메소드 파라미터를 바인딩하기전에 자동으로 계속호출(멀티스레드에 안전하지않으므로 당연 계속 생성됨)
+          - WebBindingInitializer
+            - 한번에 모든 컨트롤러에 적용
+            - 이를 적용하기 위해서는 default로 등록되어있는것을 사용하면 안되고, HandlerAdapter에 따로 DI 해주어야함
+          - 빈을 주입받아서 사용할 필요가있다면 프로토타입으로 만들어라!!(싱글톤은 절대 안된다!!)
+        - Converter와 Formatter 
+          - Converter
+            - PropertyEditor가 매번 바인딩할때마다 새로운 오브젝트를 만드는것에 대한 약점을 해결
+            - Converter 인터페이스는 메소드를 한번만 호출. 즉, 변환 작업 중에 상태를 인스턴스 변수로 저장x
+            - 단방향만 지원하기때문에, 양방향으로 하기 위해서는 두개의 Converter를 추가하면됨
+            - ConversionService
+              - InitBinder를 통해서 등록가능
+              - ConversionService에 Coverter들을 등록한뒤, ConversionService를 InitBinder를 통해서 등록
+          - Formatter (p555 잘 참고하자)
+            - 컨트롤러 내 바인딩과 타입변환에 특화되어있음(PropertyEditor의 완벽한 대체제)
+            - Locale 정보도 같이줌
+            - 양방향 전환 가능 (두개의 변환 메소드 사용)
+              - String print(T object, Locale locale) : 오브젝트 -> 문자열
+              - T parse(String text, Locale locale) : 문자열 -> 오브젝트
+            - FormattingConversionService를 통해서 formatter를 등록가능(FormattingConversionService를 conversionService에 등록하는건가..?)
+              - 이는 좀더 살펴볼것.. 스프링 부트에서는 그냥 Formatter 인터페이스 상속해서 빈으로 등록(@Component) 해주면끝..
+              ```java
+              @Component
+              public class BookFormatter implements Formatter<Book> {
+
+                  @Override
+                  public Book parse(String s, Locale locale) throws ParseException {
+                      Book book = new Book();
+                      book.setTitle(s);
+                      return book;
+                  }
+
+                  @Override
+                  public String print(Book book, Locale locale) {
+                      return book.getTitle();
+                  }
+              }
+              ```
+            - FormattingConversionServiceFactoryBean을 사용하게되면, 자동으로 등록되는 formatter가 있는데, 애노테이션을 이용해 사용가능
+              - @NumberFormat
+                - 화폐를 사용한 값들도 그냥 int로 변환해서 바인딩가능
+                - 반대도가능(뷰에서 보여줄때 그냥 int값을 화폐쓰거나 세자리마다 콤마 구분같은거 가능)
+              - @DateTimeFormat
+                - 적용할수있는 필드 타입은 Date, Calendar, Long과 Joda 라이브러리의 LocalDate, LocalTime, LocalDateTime, DateTime 이 있음
+          - 우선순위
+            1. 커스텀 프로퍼티 에디터
+            2. 컨버전 서비스의 컨버터
+            3. 스프링에 내장된 디폴트 프로퍼티 에디터
+            - *참고로 WebBindingInitializer로 일괄 적용한 컨버전 서비스나 프로퍼티에디터는 @InitBinder에서 직접 등록한 프로퍼티 에디터나 컨버전 서비스보다 우선순위가 뒤진다
+          - 
+  - 4장을 통한 기타 팁
+    - 사용자가 직접 입력하는 폼에서 들어오는 정보라면 반드시 검증이필요하다!!
+      - 자바스크립트단에서 검증을 거쳤다하더라도 반드시 검증로직을 넣어야한다!
+    - HTTP 로 넘어오는 정보는 기본적으로 모두 텍스트 정보
+    - 
 
 
 - [validation 관련 설명 굿](https://jyami.tistory.com/55)
