--- a/스터디/토비의스프링/토비의 스프링2.md
+++ b/스터디/토비의스프링/토비의 스프링2.md
@@ -850,15 +850,206 @@
             2. 컨버전 서비스의 컨버터
             3. 스프링에 내장된 디폴트 프로퍼티 에디터
             - *참고로 WebBindingInitializer로 일괄 적용한 컨버전 서비스나 프로퍼티에디터는 @InitBinder에서 직접 등록한 프로퍼티 에디터나 컨버전 서비스보다 우선순위가 뒤진다
-          - 
+        - WebDataBinder 설정항목
+          - HTTP 요청정보를 컨트롤러 메소드의 파라미터나 모델에 바인딩할 때 사용되는 바인딩 오브젝트
+            - @InitBinder 사용시 넘겨주는 오브젝트
+              - 이를 통해서 커스텀 프로퍼티 에디터(PropertyEditor)와 컨버전 서비스(ConversionService) 등록가능
+          - allowedFields & disallowedFields
+            - 바인딩에 대한 제어하도록 해줌.. client가 강제로 폼 내용 수정해서 보내는것을 막아줌..(보안)
+            - 와일드카드 사용가능
+            - allowedFields
+              - 바인딩 할 수 있는 목록을 지정해서 그 외의 모든 요청 파라미터는 막아줌
+            - disallowedFields
+              - 기본적으로 다 허용하지만, 특별한 이르믕ㄹ 가진 요청파라미터만 막아줌
+          - requiredFields
+            - setRequiredFileds를 통해 필수 파라미터의 이름을 전달해주면, 해당 파라미터가 들어오지않을때 바인딩 에러로 처리가능
+          - fieldMarkerPrefix
+            - 체크 박스를 사용할때, 체크박스를 해제하고 전송하면 폼 자체에 해당 필드가 전송이 되질않는데, 이를 해결하기위해 필드마커(default값이 "_" (언더바))를 사용한다
+            - 스프링은 필드마커가 있는 HTTP 파라미터를 발견하면, 필드마커를 제외한 이름의 필드가 폼에 존재한다고 생각하는데, 그 필드 이름의 파라미터가 요청정보에 존재하지 않는다면 해당하는 프로퍼티 값을 리셋해준다
+              - 리셋 하는 방식은 boolean이면 false, 배열타입이면 빈 배열, 그 외면 Null
+            - default값인 _(언더바) 사용하기싫으면 setFieldMarker()를 이용해 변경하면된다
+          - fieldDefaultPrefix
+            - hidden 필드를 이용해 체크박스에 대한 디폴트 값 지정하는데 사용 (default값이 "!" (느낌표))
+            - ex. \<input type="hidden" name="!type" value="member"\> 라면, 체크박스가 해제되어 type이라는 이름이 없다면 !type을 보고 member라는 값이 넘어가게됨
+            - 물론 default값 변경가능.. 하지만 되도록 변경 노노
+        - Validator와 BindingResult, Error
+          - 바인딩 작업이 실패로 끝나는 경우는 두가지
+            1. 타입변환 불가
+            2. 검증기(validator)를 이용한 검사 통과 못함
+          - Validator라는 인터페이스를 통해 검증을 진행하며, 이에 대한 검증 결과를 BindingResult를 통해 확인가능
+            - BindingResult는 Errors의 서브 인터페이스
+              - Errors 인터페이스는 바인딩 또는 검증 과정에서 오류를 발견하면 그에 대한 정보를 등록할 수 있는 메소드를 제공
+          - Validator
+            - 스프링에서 범용적으로 적용할 수 있는 오브젝트 검증기를 정의할수있는 API
+            - HTTP 요청을 @ModelAttribute 모델에 바인딩할때 주로 사용되나, 비지니스 로직에서 검증로직을 분리하고 싶을때도 사용가능!
+            - 메소드 구성
+              - boolean supports(Class<?> clazz) : 검증할 수 있는 오브젝트 타입인지 확인
+                - 타입 검증할때는 상속받은 클래스일수도잇으므로 isAssinalbeFrom()을 사용하자!
+              - void validate(Object target, Errors errors) : ***바인딩이 완료된*** 오브젝트를 이용해 값을 검증하는 코드를 작성
+            - 검증 로직은 특정 계층에 종속되기보다 도메인 오브젝트처럼 독립적으로 만드는게 좋음!
+              - 즉, Validator에서 필요한 로직을 담고있는 빈을 호출하는것도 좋다!(빈 주입 받을수있으니~)
+            - 사용방법
+              - 빈으로 등록한 Validator를 컨트롤러에 주입받아서 필요한 검증로직에 사용
+              - @Valid를 이용한 자동검증
+                - JSR-303(Bean Validation)의 javax.validation.Valid 애노테이션 사용
+                  - 내부적으로는 스프링의 Validator를 이용한 검증이 수행됨
+                - 컨트롤러 메소드 파라미터에 (ex. @ModelAttribute 붙은 객체) 사용하면, 바인딩 과정에서 자동으로 검증이 진행
+                - @InitBinder를 통해서 setValidator를 사용하여 등록해줘야함
+                - 해당 컨트롤러의 모든 메소드에서 검증기능 사용할수있음~
+              - 서비스 계층 오브젝트에서의 검증
+                - 서비스계층에서 DI 받아서 사용하면되는데, BindingResult 오브젝트를 직접 만들어줘야함
+                  - BeanPropertyBindingResult를 사용하는게좋음
+              - Validator에서 서비스 계층을 DI 받아서사용
+                - Validator 내부에서 서비스 계층의 기능을 사용해 검증 작업을 수행하기때문에 바로 컨트롤러 내에서 BindingResult를 통해서 결과를 전달받을수있음
+                - 그러나 단점은 컨트롤러에서 두번 이상 서비스 계층을 호출하여 서비스 계층에 트랜잭션 경계를 설정해뒀다면 트랜잭션이 두번 생성될수있으니 주의해야함
+                - 하지만 각 오브젝트는 자기 책임에 충실하게 독립적으로 작성가능!
+          - JSR-303 빈 검증
+            - 스프링에서는 LocalValidatorFactoryBean을 이용해서 사용가능
+              - LocalValidatorFactoryBean은 JSR-303의 검증기능을 스프링의 Validator처럼 사용할수있게해주는 일종의 어뎁터
+              - 요거 주입받아서 @InitBinder에 등록해줘야함
+            - 오브젝트 필드에 달린 제약조건을 애노테이션을 이용해 검증을 진행할수잇음
+              - ex) public class User{@NotNull String name}
+              - 어노테이션 여러개 있으니 reference 잘 참고할것 
+                - <span style="color:yellow"> 여기 내용 추가하자 </span>
+          - BindingResult와 MessageCodeResolver
+            - BindingResult에는 모델의 바인딩 작업중에 나타난 타입 변환 오류정보와 검증 작업에서 발견된 검증 오류정보가 모두 저장
+            - 이 오류 정보를 토대로 폼을 다시 띄울때 활용
+            - 기본적으로 messages.properties와 같은 프로퍼티 파일에 담긴 메세지를 가져와 에러메세지로 활용함
+            - BindingResult에 에러코드를 전달해서 넣어주면 MessageCodeResolver를 통해 좀더 상세한 메세지 키 값으로 확장
+              - ex. user라는 이름을 가진 모델 바인딩, 검증하는 중에 name이라는 필드 이름과 field.required라는 에러코드가 BindingResult에 등록시 아래의 키 후보가 생성
+                1. 에러코드.모델이름.필드이름 : field.required.user.name
+                2. 에러코드.필드이름 : field.required.name
+                3. 에러코드.타입이름 : field.required.User 
+                4. 에러코드 : field.required
+                - 위의 키를 messages.properties 파일안에서 찾아 우선순위에 따라 하나를 찾아서 리턴
+                  - field.required.user.name=안녕     
+                  field.required=안녕2     
+                  이렇게 있다면 "안녕"을 사용
+                - *변환시 타입변환 에러나면, typeMismatch 라는 에러코드를 지정.
+                  - ex. BigDecimal 이라면 3번 후보는 typeMismatch.java.lang.BigDecimal 로 키가만들어짐
+              - 특정 필드에 속한 에러가 아니라면 reject()를 사용해서 글로벌 에러를 등록가능. 이때는 필드이름이 없으므로 에러코드와 모델 이름을 이용해서 두개의 후보만 나타남
+                1. 에러코드.모델이름   
+                2. 에러코드
+              - JSR-303의 애노테이션 검증을 이용하면, 에러코드는 애ㅌ노테이션 이름으로 지정
+                - ex. @NotNull이면, NotNull이 에러코드로 사용
+          - MessageSource
+            - MessageCodeResolver를 통해 여러개의 후보로 만들어진 키들을 MessageSourceResolver를 통해서 최종적인 메세지로 만들어짐
+            - messages.properties 리소스 번들 방식을 사용하는 ResourceBundleMessage를 등록해주어야함
+            - 일정시간마다 파일변경여부 확인해서 메세지를 갱신하고자하면 ReloadableResourceBundleMessageSource를 사용하면댐
+            - 최종메세지 만들기 위해서 아래 네가지 정보를 활용
+              - 코드
+                - DefaultMessageCodeResolver를 통해서 만들어진 키 후보를 코드로 사용하여 차례로 적용해서 첫번째 발견되는 메세지 선택
+              - 메시지 파라미터 배열
+                - messages.properties의 value에 " {0} " 과 같이 사용할수있는데 BindingResult나 Errors의 rejectValue,reject에 파라미터를 넘겨줄수있다
+              - 디폴트메세지
+                - messages.properties에 후보 키들을 찾을수 없으면 디폴트 메세지가 사용될수있는데, 디폴트 메세지는 BindingResult나 Errors에서 전달
+                - 되도록 messages.properties에 등록하도록!
+                - 디폴트 메세지까지 못찾으면 에러발생
+              - 지역정보
+                - LocaleResolver에 의해 결정된 현재 지역정보
+                - 디폴트 메세지를 messages.proerties라고 했다면, Locale.KOREAN일 경우 messages_ko.properties를 찾게됨
+                - 지역에 해당하는 메세지 파일없으면 디폴트로!
+        - 모델의 일생
+          - MVC 아키텍처에서 ***정보***를 담당
+            - 클라이언트 요청시 전달된 정보담은 오브젝트
+            - 비지니스 로직에 의해 생성된 정보를 응답으로 보내는 동안 유지하는 오브젝트
+          - HTTP 요청으로부터 컨트롤러 메소드까지의 그림(모델에 국한된설명)
+            - ![](httpreq_controller_process.jpeg)
+            1. 컨트롤러의 메소드의 모델 파라미터와 @ModelAttribute로 부터 모델이름, 모델타입정보를 가져옴
+            2. 모델이름과 동일한 것이 있따면 HTTP 세션에 저장해둔것이 있는지 확인. 있다면 저장된것 가져와 사용
+            3. WebBindingInitializer나 @InitBinder 메소드를 통해서 등록된 변환 기능 오브젝트를 이용해 HTTP 요청 파라미터를 모델의 프로퍼티에 맞도록 변환해서 넣어줌. 타입변환 실패하면 BindingResult에 에러등록 (WebDataBinder에 등록된 프로퍼티 에디터, 컨버전 서비스)
+            4. @Valid가 지정되어이싸면 등록된 검증기로 모델을 검증. 검증 결과는 BindingResult에 등록. 등록된 검증기 없거나 @Valid 없으면 이를 생략 (WebDataBinder에 등록된 검증기)
+            5. 모델 오브젝트는 컨트롤러 메소드가 실행되기 전에 임시모델 맵에 저장. 컨트롤러 메소드 실행 마친 뒤에 추가로 등록된 모델 오브젝트와 함께 ModelAndView에 함께 담겨 DispatcherServlet에 전달(@ModelAttribute 지정하면 컨트롤러 메서드에서 별다른 작업 없이도 자동으로 모델에 등록되는 이유!)
+            6. 모델 파라미터 다음에 BindingResult있으면 이를 제공. BindingResult는 ModelAndView의 모델맵에 자동으로 추가됨!
+          - 컨트롤러 메소드로부터 뷰까지 그림
+            - ![](controller_view_process.jpeg)
+            1. ModelAndView의 모델맵에 직,간접적으로 생성된 @ModelAttribute의 오브젝트가 담겨있고, BindingResult도 함께잇음
+            2. WebDataBinder에 등록되어있는 MessageCodeResolver가 메세지 코드 후보 목록을 만들어줌
+            3. LocaleResolver에 의해 결정된 지역정보와 2번에서 생성한 코드후보 목록을 이용해 MessageSource가 뷰에 출력할 최종 에러 메세지 결정(messages.properties파일을 사용하기위해서는 ResourceBundleMessageSource 등록필요)
+            4. @SessionAttribute로 지정한 이름과 일치하는 모델이 있으면 HTTP 세션에 저장. 저장된 오브젝트는 다음요청에서 활용
+            5. 뷰에 의해 최종 콘텐트가 생성될때 모델 맵으로 전달된 모델 오브젝트는 뷰의 표현식언어를 통해 참조돼서 콘텐트에 포함
+  - 메세지 컨버터와 AJAX
+    - HTTP 요청 메세지 본문과 HTTP 응답 메세지 본문을 메세지로 다루는 방식을 사용할때 메세지 컨버터가 사용된다
+      - @RequestBody, @ResponseBody 사용
+    - 메시지 컨버터의 종류
+      - 컨버터는 HandlerAdapter에 등록
+      - ByteArrayHttpMessageConverter
+        - 바이트 배열로 가져옴
+        - 미디어 타입은 모든것을 지원
+        - @ResponseBody로 보낼때는 콘텐트 타입이 application/octet-stream으로 지정
+      - StringHttpMessageConverter
+        - 본문을 그대로 String으로 가져옴
+        - 미디어 타입은 모든것을 지원
+        - @ResponseBody로 보낼때는 콘텐트 타입이 test/plain으로 지정
+      - FormHttpMessageConverter
+        - 미디어 타입이 application/x-www-form-urlencoded
+      - SourceHttpMessageConverter
+        - 미디어 타입이 application/xml, application/*+xml, text/xml
+      - Jaxb2RootElementHttpMessageConverter
+        - 미디어 타입이 application/xml, application/*+xml, text/xml
+      - MarShallingHttpMessageConverter
+        - 미디어 타입이 application/xml, application/*+xml, text/xml
+      - MappingJacksonHttpMessageConverter
+        - Jackson OjbectMapper를 이용해서 자바오브젝트와 JSON 문서를 자동으로 변환
+        - 미디어 타입은 application/json
+        - 자바빈 스타일 or HashMap으로 받을수있음
+  - @MVC 의 확장포인트
+    - AnnotationMethodHandlerAdapter
+      - WebBindingInitializer
+      - HttpMessageConverter
+      - SessionAttributeStore
+        - 세션 저장방법 변경 가능
+      - WebArgumentResolver
+        - 메소드 파라미터 선언을 확장가능
+        - customArgumentResolver 프로퍼티에 WebArgumentResolver 구현한거 넣어주면댐
+      - ModleAndViewResolver
+        - 컨트롤러 메소드의 리턴타입과 메소드 정보, 애노테이션 정보등을 참고해서 ModelAndView를 생성해주는 기능을 만들수있음
+  - 스프링3.1의 @MVC
+    - 새로운 RequestMapping 전략
+      - 클래스 변경
+        - DefaultAnnotaionHandlerMapping -> RequestMappingHandlerMapping (@RequestMapping 지원)
+        - AnnotationMethodHandlerAdpater -> RequestMappingHandlerAdapter (@RequestMapping 지원)
+        - AnnotationMethodHandlerExceptionResolver -> ExceptionHandlerExceptionResolver (@ExceptionHandler 지원)
+      - history..
+        - 기존 Controller 인터페이스만 구현해서 매핑해주는(클래스단위 매핑) 방법에서 RequestMapping이 클래스 단위가아니라 메소드단위로 매핑하도록 설계가 되면서, Adpater가 어떤 메소드를 실행시켜야되는지를 찾는 mapping 역할도 했었음.. (Adapter는 실행만 책임짐..)
+        - 대표적으로 핸들러 인터셉터의 활용이 제한..
+          - 핸들러 인터셉터는 핸들러 매핑이 끝나고 실제 핸들러가 실행되기 전후에 동작
+            - 인터셉터로 핸들러 실행 전에 preHandle 이라는 함수를 사용하게되는데, 여기서 받게되는 파라미터인 "Object handler" 에 해당 컨트롤러 객체 전부를 넘겨줘 버려서 얻을수 있는 정보가 제한적..
+        - 이를 해결하기위해 HandlerMethod 타입이 스프링 3.1에 나옴!
+      - HandlerMethod
+        - @RequestMapping이 붙은 메소드의 정보를 추상화한 오브젝트 타입
+        - 컨트롤러 오브젝트 대신 추상화된 메소드 정보를 담은 HandlerMethod를 결과로 돌려주고, 핸들러 어뎁터는 HandlerMethod 오브젝트의 정보를 이용해 메소드를 실행
+          - 여기서 중요한것은 HandlerMethod는 그 자체가 실행 가능한 오브젝트가 아니다!! 대신, 메소드를 실행하는데 필요한 참조정보를 담고있는 오브젝트! 핸들러어뎁터를 이 참조정보를 활용해서 간접적으로 @RequestMapping의 메소드를 실행
+        - HandlerMethod에 담긴정보
+          - 빈 오브젝트
+          - 메소드 메타정보
+          - 메소드 파라미터 정보
+          - 메소드 애노테이션 메타정보
+          - 메소드 리턴 값 메타정보
+        - HandlerMethod가 등록되는 과정
+          1. DispatcherServlet 시작
+          2. RequestMappingHandlerMapping이 모든 컨트롤러 빈의 메소드를 살펴서 HandlerMethod 형태로 저장
+          3. 요청 들어오면 해당 HandlerMethod 반환 (RequestMappingHandlerMapping 빈에 접근하면 저장된 핸들러 메소드 모두 확인 가능)
+          
   - 4장을 통한 기타 팁
     - 사용자가 직접 입력하는 폼에서 들어오는 정보라면 반드시 검증이필요하다!!
       - 자바스크립트단에서 검증을 거쳤다하더라도 반드시 검증로직을 넣어야한다!
     - HTTP 로 넘어오는 정보는 기본적으로 모두 텍스트 정보
-    - 
-
+    - isAssignalbeFrom()
+      - 파리미터로 넘어오는 클래스가 상속 or 구현한 놈인지 확인(자신도 가능)
+        - 중요한건 반대로는 체크가 안됨
+        - SuperClz.isAssinableFrom(SubClz.class) //이건가능
+        - SubClz.isAssinableFrom(Super.class) //이건안됨
+      - *instanceof 는 객체가 뒤에나오는 클래스로 캐스팅 가능한지 확인이기때문에 super 클래스가 오던, sub 클래스가 오던 상관없음!
+    - Controller에서 검증시에는 Spring에서 제공해주는 ValidationUtils 사용하면 편함
+    - AJAX : Asynchronous JavaScript and XML 의 약자로 자바스크립트를 이용해 서버와 비동기 방식의 통신을 해서 웹 페이지를 갱신하지 않은 채로 여러가지 작업을 수행하는 프로그래밍 모델.. XML로 제한된것은 아니고 JSON이 AJAX의 인기 메세지 포맷으로 자리잡음
+      - JSON(JavaScript Object Notation) : 자바스크립트의 오브젝트를 표현하는 표기법으로 사용
+    - RESTful 한 서비스를 운영하게되면, url에 필요한 정보만 정확하게 담아주게된다. 그로인해 DispatcherServlet에 "/"가 들어오게 되는 경우가 많은데, DispatcherServlet을 "/" 를 맵핑하게되면, 모든 URL을 DispatcherServlet이 담당하기떄문에 /index.html이나 /js/jquery.js 같은 URL을 전달받게 되면 에러를 뱉는다.(해당 경로를 DispatcherServlet이 찾을수없으니..) 이러한 문제를 해결하기위해서 \<mvc:default-servlet-handler/\> 를 사용!
+      - \<mvc:default-servlet-handler/\> 이거를 사용하게되면, 똑같이 DispatcherServlet으로 모든 url이 전달은 되나, 핸들러매핑이 적절한 핸들러를 찾지못하게되면, 해당요청은 정적리소스라고 판단하고 디폴트 서블릿으로 넘기게된다
+    - \<url:resource/\> 는 필요할때 확인.. p630
 
 - [validation 관련 설명 굿](https://jyami.tistory.com/55)
 
 - RequestMapping에서 produces 로 요청조건을 주면 client에서 요청시 Accept 헤더에 요청 조건에 맞는 값을 넘겨주어야한다
   - ex. produces= application/json 이라면, curl로 전송할때 curl -i -H "Accept: application/json" url.. 이런식으로 요청해야한다!
+  - 
