--- a/스터디/토비의스프링/토비의 스프링2.md
+++ b/스터디/토비의스프링/토비의 스프링2.md
@@ -551,7 +551,7 @@
       - 사용자한테 어떻게 보여줄지는 여기서 셋팅하고 자세한 로그나 알림이 필요하다면 인터셉터 핸들러의 afterCompletion을 통해서 하도록!
       - 종류
         - AnnotationMethodHandlerExceptionResolver (디폴트)
-          - 예외가 발생한 ***컨트롤러 내*** 의 메소드 중에서 @ExcpetionHandler 붙은 메소드 실행
+          - 예외가 발생한 ***컨트롤러 내*** 의 메소드 중에서 @ExceptionHandler 붙은 메소드 실행
           - 넘겨받을수 있는 파라미터들에 관한 여러 관례들이 있으니 찾아볼것!
         - ResponseStatusExceptionResolver (디폴트)
           - 예외를 특정 HTTP 응답상태코드로 전환!
@@ -910,6 +910,7 @@
             - 오브젝트 필드에 달린 제약조건을 애노테이션을 이용해 검증을 진행할수잇음
               - ex) public class User{@NotNull String name}
               - 어노테이션 여러개 있으니 reference 잘 참고할것 
+                - [validation-reference](https://www.baeldung.com/javax-validation)
                 - <span style="color:yellow"> 여기 내용 추가하자 </span>
           - BindingResult와 MessageCodeResolver
             - BindingResult에는 모델의 바인딩 작업중에 나타난 타입 변환 오류정보와 검증 작업에서 발견된 검증 오류정보가 모두 저장
@@ -1030,7 +1031,96 @@
           1. DispatcherServlet 시작
           2. RequestMappingHandlerMapping이 모든 컨트롤러 빈의 메소드를 살펴서 HandlerMethod 형태로 저장
           3. 요청 들어오면 해당 HandlerMethod 반환 (RequestMappingHandlerMapping 빈에 접근하면 저장된 핸들러 메소드 모두 확인 가능)
-          
+    - @RequestMapping 핸들러 매핑 : RequestMappingHandlerMapping
+      - 클라이언트의 요청을 @RequestMapping이 붙은 메소드로 매핑해줌! 매핑결과는 HandlerMethod 타입으로 리턴해줌
+      - 요청조건
+        - 매핑에 기준이 되는 정보를 요청조건이라함
+        - @RequestMapping 어노테이션의 엘리먼트와 값으로 표현
+        - 종류(총 7가지)
+          - value : URL패턴
+          - method : HTTP 요청 메소드
+          - params : 파라미터
+          - headers : HTTP 헤더
+          - consumes : Content-type 헤더
+          - produces : Accept 헤더
+            - Accpet 헤더에 대한 요청조건일뿐 아니라, Reponse 의 content-type 또한 여기서 셋팅한 값으로 전달됨
+              - 즉, application/json;charset=utf-8 이렇게 produce를 지정하면, response의 content type도 이와 동일하게 지정되고, 브라우저는 해당 내용에 맞춰서 보여줌(한글깨질때 잘 확인할것..)
+              - 어떻게보면 당연한게, Accept 헤더의 요청조건이 application/json;charset=utf-8 이라면 브라우저는 저 형식에 맞추어서 받을수 있다라는 뜻일것이고, 그것에 맞추어 서버가 응답해주는것이니.. 당연..! 여기서 놓치지말아야할것은 클라이언트가 */*로 Accept를 놓앗을때, 서버에서 응답으로 한글을 보냈는데 utf-8로 응답을 주지않으면 깨질수있으니, produce를 통해서 charset을 지정해서 보내주는것이 필요하다는것!! 
+          - 사용자가 등록하는 커스텀 조건
+        - 타입레벨과 메소드레벨에 모두 사용할수있으므로 하나의 핸들러 메소드를 선정할때 참고하는 요청조건은 모두 14가지
+          - 두가지 이상의 조건이 지정된 경우네는 조건을 조합하거나 결합해서 사용(AND로 결합될수도있고, OR로 결합될수도있음)
+        - RequestMappingHandlerMapping 전략 빈에는 URL 패턴 요청 조건에서 사용하는 두가지 프로퍼티가있음
+          - useSuffixPatternMatch : URL 패턴조건에 ".*" 를 포함시킬지..(디폴트는 true, 포함. 즉, /hello라고 지정했다면 /hello.html, /hello.do, /hello.world 가 모두 조건을 만족) 
+          - useTrailingSlashMatch : URL 패턴조건에 "/"가 붙는 경우를 포함시킬지..(디폴트는 true. 즉, /hello라고 지정했다면 /hello/ 또한 포함)
+        - 스프링3.1 부터는 Content-Type과 Accept은 headers에서 사용노노! consumes와 produces 를 사용할것!!
+        - Content-Type 조건은 OR로 연결됨
+          - 만약 타입레벨과 메소드레벨 모두에 적용되어있다면 타입레벨은 무시됨
+        - Accept 헤더는 클라이언트가 받아들일수 있는 미디어 타입을 지정하는데 사용.. 조건이 결합되는 방식은 consumes와 동일
+    - @RequestMapping 핸들러 어뎁터 : RequestMappingHandlerAdpater
+      - @Validated
+        - 검증방법이 특정 조건에 따라 달라져야할때 사용
+        ```java
+          // 관리자/사용자 폼 검증
+
+          //일종의 marker 인터페이스
+          public interface User{}
+          public interface Admin{}
+
+          public class User{
+            @NotEmpth(groups={User.class, Admin.class})
+            String name;
+
+            @NotEmpty(groups=User.class)
+            String userId;
+
+            @NotEmpty(groups=Admin.class)
+            String adminId;
+          }
+
+          public class Controller{
+            @RequestMapping(...)
+            public String saveUser(@ModelAttribute("user") @Validated(User.class) User user){
+              //Validated에서 User라는 마커(인터페이스)를 사용하면, User오브젝트에서 groups에 User.class가 들어가있는것만 검증
+              //만약 그냥 @Valid를 사용하면 groups 내용은 먹지않음!
+              ...
+            }
+          }
+        ``` 
+      - @Valid와 @RequestBody
+        - 3.1부터는 메세지 컨버터 이용하는 @RequestBody 파라미터에도 사용가능
+        - ~~BindingResult 또한 사용가능~~
+          - 사용불가!! @RequestBody에서 @Valid로 검증하면 예외처리는 인터셉터(ControllerAdvice)나 @ExceptionHandler 로 할것!
+          - BindingResult로 넘어가지않기때문에 그냥 에러 뱉는다.. 그걸 잡아서 처리해야하는 개념으로 접근해야하기에 인터셉터나 ExceptionHandler 사용필요..
+      - UriComponentsBuilder
+        - URI 생성하거나 가공할때 사용하면 좋음..
+        - static으로 사용
+      - RedirectAttributes와 리다이렉트 뷰
+        - Model에 데이터 넣어서 Redirect하면, 자동으로 파라미터가 추가되어 전달한다(쿼리 스트링으로) 그런데, 전달하고자 하는 정보외에도 기본적으로 model에 추가되는 정보가 있을때 불필요하게 파라미터를 전달하게 되는데(ex. 메소드레벨에 선언된 @ModelAttribute 내용..), 이를 막기위해 RedirectAttributes를 사용한다(RedirectAttributes는 Model의 서브타입) 즉, addAttribute("key","value") 로 넣은 값만 쿼리스트링으로 넘어간다
+          - <span style="color:red"> springboot 2.4.5 확인해본결과 redirect하면 특별히 넘겨줄 파라미터 제외하고 model에 데이터 안넣음.. 개선된듯.. </span>
+        - RedirectAttributes 로 플래시 애트리뷰트 또한 사용가능한데, addFlashAttribute("key","value") 로 사용하면됨
+        - 당연히 메소드 파라미터로 전달받는것!
+      - 3.1의 확장포인트 (RequestMappingHandlerAdpater로 변경되었으니 확장하는 클래스도 변경!)
+        - HandlerMethodArgumentResolver
+          - 메소드 파라미터 확장하기 위해 사용
+          - 3.1에 맞추어, WebArgumentResolver 를 대체
+          - RequestMappingHandlerAdpater의 customArgumentResolvers 프로퍼티에 추가하면됨
+          - 자세한 사용법은 필요시 찾아볼것
+        - HandlerMethodReturnValueHandler
+          - 리턴값 처리하는 기능 확장
+          - 3.1에 맞추어, ModleAndViewResolver 를 대체
+          - RequestMappingHandlerAdapter의 customReturnValueHandlers 프로퍼티에 넣어주면됨
+          - 자세한 사용법은 필요시 찾아볼것
+    - @EnableWebMvc와 WebMvcConfigurationSupport를 이용한 @MVC 설정
+      - @EnableWebMvc를 사용하면 기본적으로 디폴트 인프라 빈들이 등록되는데, 해당 인프라빈을 변경하거나 수정자를 통해 셋팅이 필요한 즉, 사용자의 커스텀이 필요한 경우는 WebMvcConfigurer(빈 설정자) 나 WebMvcConfigurationSupport를 사용한다
+        - WebMvcConfigurer는 인터페이스.. 이를 구현해서 빈으로 등록되어야 빈 설정자로 사용가능 
+          - WebMvcConfigurer 로 구현하는 내용들은 p659참고
+          - 모두 구현하기 귀찮으면 WebMvcConfigurerAdatper 를 상속해서 필요한것만 오버라이딩하면됨
+        - WebMvcConfigurationSupport 는 클래스이기때문에 상속해서 사용. 디폴트 인프라빈들을 @Bean으로 등록해놓았기때문에, 커스텀할때 용이하다
+          - WebMvcConfigurer에서 configure로 시작하는 함수들을 오버라이딩하면 기본적으로 등록되어야하는 디폴트 빈들이 아예 무시가 되어버리는데, WebMvcConfigurationSupport는 @Bean으로 이미 등록되어져잇기때문에 "추가"의 개념으로 등록됨
+      - *스프링은 @Enable 전용 애노테이션으로 등록되는 인프라 빈에 대한 추가 설정을 위해 설정용 빈을 활용하는 방법을 제공한다
+        - 설정용 빈이 등록되어잇으면, @Enable~~ 을 활용하여 인프라 빈을 추가할때 설정용 빈에 등록된 내용을 기반으로 인프라빈 등록이 이루어진다
+        - 보통 ~~Configurer 인터페이스의 이름으로 되어있고, 이를 구현하여 빈으로 등록하면 설정용 빈으로 사용되고, 이를 설정자 또는 configurer(컨피규어러) 또는 빈 설정자 라고 부른다
+      - 여기서 추가로 필요한 뷰, 뷰리졸버, 지역정보 리졸버, 멀티파트 리졸버, 메세지 소스 등등은 @Bean을 활용하여 등록하면된다!!!
   - 4장을 통한 기타 팁
     - 사용자가 직접 입력하는 폼에서 들어오는 정보라면 반드시 검증이필요하다!!
       - 자바스크립트단에서 검증을 거쳤다하더라도 반드시 검증로직을 넣어야한다!
@@ -1047,9 +1137,21 @@
     - RESTful 한 서비스를 운영하게되면, url에 필요한 정보만 정확하게 담아주게된다. 그로인해 DispatcherServlet에 "/"가 들어오게 되는 경우가 많은데, DispatcherServlet을 "/" 를 맵핑하게되면, 모든 URL을 DispatcherServlet이 담당하기떄문에 /index.html이나 /js/jquery.js 같은 URL을 전달받게 되면 에러를 뱉는다.(해당 경로를 DispatcherServlet이 찾을수없으니..) 이러한 문제를 해결하기위해서 \<mvc:default-servlet-handler/\> 를 사용!
       - \<mvc:default-servlet-handler/\> 이거를 사용하게되면, 똑같이 DispatcherServlet으로 모든 url이 전달은 되나, 핸들러매핑이 적절한 핸들러를 찾지못하게되면, 해당요청은 정적리소스라고 판단하고 디폴트 서블릿으로 넘기게된다
     - \<url:resource/\> 는 필요할때 확인.. p630
-
-- [validation 관련 설명 굿](https://jyami.tistory.com/55)
-
-- RequestMapping에서 produces 로 요청조건을 주면 client에서 요청시 Accept 헤더에 요청 조건에 맞는 값을 넘겨주어야한다
-  - ex. produces= application/json 이라면, curl로 전송할때 curl -i -H "Accept: application/json" url.. 이런식으로 요청해야한다!
-  - 
+    - @RequestMapping이 타입레벨에는 선언안되어있고, 메소드레벨에서만 사용했을때 정상동작이 안되었었으나(스프링 3.0), 스프링 3.1부터는 메소드레벨에만 선언해도됨 
+    - Post로 전송할때 parameter로 보내는것과 body 보내는거는 다른거다......
+      - parmater를 오브젝트로 변경해주는게 @ModelAttribute
+      - body를 오브젝트로 변경해주는게 @RequestBody
+    - 컨트롤러 메소드 파라미터에 별도 어노테이션없이 그냥 클래스타입이 오게되면(ex. User), 이는 param으로 파싱을 한다. 즉, 백날 body에 json 넣어서 요청해도 절대 받지않는다.. body는 무조건 @RequestBody를 써야가능..!
+    - [REST 사용시 ERROR handling 하는 가이드](https://www.baeldung.com/exception-handling-for-rest-with-spring)
+      - [spring boot error 페이지로 매핑하는 구조](https://goddaehee.tistory.com/214)
+      - ResponseStatusException 를 사용해서 프로그래밍적으로 REST 응답 활용하는데 좋음
+        - 최종적으로 이거를 전달해주면 스프링부트의 기본 에러페이지보여주는 방법에 의해 body에 json으로 에러가 깔끔하게떨어짐..(당연 ExceptionHandler가 잡아서 뭔짓을 하면 안되겠지!)
+    - 하나의 사진으로 깔끔하게 정리
+      - ![](MVC_easily_understand.png)
+        - 출처: https://earth-95.tistory.com/42
+    - <span style="color:yellow">MockMvc는 에러발생시, 인터셉터시 postHandle과 afterCompletion 의 로그는 찍지않던데, 예외핸들러를 실행시킨뒤 afterCompletion은 왜 안탈까?</span>
+      - HandlerInterceptor로 확인해본바, preHandle의 로그는 남으나, postHandle과 afterCompletion의 로그는 안남음
+    - 컨트롤러 관련 테스트한거는 toby-spring 프로젝트에있으니 꼭 참고할것!
+    - [validation 관련 설명 굿](https://jyami.tistory.com/55)
+    - RequestMapping에서 produces 로 요청조건을 주면 client에서 요청시 Accept 헤더에 요청 조건에 맞는 값을 넘겨주어야한다
+      - ex. produces= application/json 이라면, curl로 전송할때 curl -i -H "Accept: application/json" url.. 이런식으로 요청해야한다!
