공부한거추가

--- a/스터디/토비의스프링/토비의 스프링2.md
+++ b/스터디/토비의스프링/토비의 스프링2.md
@@ -461,90 +461,90 @@
         void afterCompletion(HttpServletRequest request, HttpServletResponse response, Object handler, Exception ex) throws Exception
         
       ```
-- 뷰
-  - 웹 환경에서는 보통 브라우저에 나타낼수있는 HTML을 만들어주는게 뷰의 역할이다
-  - 컨트롤러가 작업을 마치면 ModelAndView를 넘겨주는데 이때, 두가지 방법이있다
-    - 첫째는 View 타입의 오브젝트를 돌려주는것
-    - 둘째는 뷰 이름을 돌려주는것
-      - 여기서 뷰 리졸버가 사용되어 논리적인 뷰이름을 실질적인 뷰 오브젝트로 전환시켜준다
-  - 뷰의 종류
-    - InternalResourceView
-      - RequestDispatcher의 forward() 나 include()를 사용하는 뷰
-      - /WEB-INF/ 밑으로 접근가능
-      - JSP 뷰를 만든다면, 이를 ModelAndView에 넣으면 JSP로 포워딩해줌
-    - JstlView
-      - InternalResourceView 의 하위클래스
-      - locale(지역정보) 에 따라 달라지는 지역화(localization)된 메세지를 jsp에서 사용 가능
-        - message.propierteis(지역정보가 한국으로 설정되어있다면, message_ko.properties) 파일의 메세지를 JSTL의 fmt에서 사용가능
-    - RedirectView
-      - 실제 뷰가 생성되지않고, URL만 만들어져 다른 페이지로 리다이렉트됨
-      - 모델정보가 있다면, URL 뒤에 파라미터로 추가
-      - "redirect:~~" 이렇게 시작되면 뷰 리졸버가 인식해서 RedirectView로 만들어줌
-    - VelocityView
-    - FreeMarkerView
-    - MarshallingView
-    - AbstractExcelView, AbstractJExcelView, AbstractPdfView
-    - AbstractAtomFeedView, AbstractRssFeedView
-    - XsltView, TilesView, AbstractJasperReportsView
-      - AbstractJasperReportsView는 JasperReport를 이용해 CSV, HTML, PDF, Excel 다 만들수있음
-    - MappingJacksonJsonView
-      - 모든 오브젝트를 json으로 변환
-      - Http 응답의 content type은 application/json으로 지정
-  - 뷰 리졸버
-    - 논리적인 뷰이름을 실질적인 뷰 오브젝트로 전환시켜준다
-    - 보통 뷰 오브젝트를 캐싱하기때문에 뷰가 반복적으로 만들어지지않게 해서 성능면에서도 좋음
-    - 뷰 리졸버를 빈으로 등록하지않으면, DispatcherServlet의 디폴트 뷰 리졸버인 InternalResourceViewResolver가 사용
-    - 뷰 리졸버를 하나 이상을 빈으로 등록해서 사용할수있고, 여러개 사용할때는 order를 사용해서 뷰 리졸버의 순서를 지정하는게 좋음
-      - 순서를 지정했을때 먼저 선택되면 바로 해당 뷰로 리턴
-    - 종류
-      - InternalResourceViewResolver
-        - 되도록이면 default로 사용하지말고, prefix나 suffix를 지정해서 사용할것
-        - 클래스패스에 JTSL 라이브러리가 존재하면 JstlView를 사용하고, 그렇지않으면 InternalResourceView를 사용
-      - ResourceBundleViewResolver
-        - 클래스패스에있는 views.properties 파일을 기반으로 뷰를 매칭
-        - 모든 뷰를 파일에 일일이 정의해야하기때문에, 단독적으로 사용하는것은 비추
-          - InternalResourceViewResolver 와 함께 사용하여 우선순위를 지정해주어, ResourceBundleViewResolver 에서 못찾은놈은 InternalResourceViewResolver 에서 찾게해주도록 하는게 좋음(InternalResourceViewResolver의 order는 Integer.MAX가 기본값.. 상당히 후순위)
-        - 지역화기능 사용가능
-      - XmlViewResolver
-        - /WEB-INF/views.xml에 정의된 대로 뷰를 매칭
-        - 지역화기능 사용못함
-      - BeanNameViewResolver
-        - 빈 이름으로 뷰를 찾아서 매칭
-        - ModelAndView 에는 빈 이름을 전달해주고, 해당 빈 이름으로 등록되어있는 뷰를 사용
-          - 뷰 클래스와 jsp 위치 등 다 셋팅되어있음
-      - ContentNegotiatingViewResolver
-        - 같은 URL이지만 보내는 파라미터에 따라서 다르게 view를 제공해줄수있게함
-        - ContentNegotiatingViewResolver가 뷰를 결정하는 과정
-          1. 미디어 타입 결정
-              - 미디어 타입은 HTTP의 content type 에 대응
-              - 사용자의 요청정보로 사용자가 요청한 미디어 타입정보를 추출하게됨(아래 순서대로)
-                1. URL 확장자를 가지고 결정 
-                2. 포맷 지정하는 파라미터로 미디어 타입을 결정
-                     - "/hello?format=pdf" 라면, pdf 미디어 타입
-                3. Accept 헤더의 설정 이용
-                4. defaultContentType 프로퍼티에 설정해준 디폴트 미디어 타입을 사용(이게 어떻게 사용되는건지..)
-          2. 뷰 리졸버 위임을 통한 후보 뷰 선정
-             - 여러개의 뷰 리졸버를 사용하지만, 우선순위를 무시
-             - 뷰 이름을 처리할수있는 등록된 모든 뷰 리졸버를 통해서 뷰를 돌려받고 이를 모두 최종 뷰 선택을 위한 후보목록에 넣어둠
-             - ContentNegotiatingViewResolver에 사용할 뷰 리졸버 등록해놔야함
-          3. 미디어 타입 비교를 통한 최종 뷰 선정
-             - 요청정보에서 추출한 미디어 타입(1번의 결과)과 뷰 리졸버에서 찾은 뷰 목록(2번위 결과)을 매칭해서 사용할 뷰를 결정
-             - 여기서 ContentNegotiatingViewResolver에 defaultViews 등록한 뷰는 항상 후보목록에 올라가게됨
-          - 예시
-            - ContentNegotiatingViewResolver 셋팅정보
-              - mediaTypes : html / text/html, json / application/json
-              - viewResolvers 
-                - BeanNameViewResolver
-                - InternalResourceViewResolver
-                  - prefix : /WEB-INF/jsp/
-                  - suffix : .jsp
-                - defaultViews
-                  - MappingJacksonView
-            - 위 셋팅정보를 기반으로 /content.html 이라는 URL에서 뷰 찾는과정
-              - URL의 .html을 보고 미디어 타입은 html로 결정된다
-              - ModelAndView에서 content라는 String으로 view name을 return을 했다면, viewResolvers에 등록된것을 바탕으로,  content로 등록되어있는 빈 이름의 뷰를 찾아서 최종 후보에 등록하고, 또한 new JstlView("/WEB-INF/jsp/content.jsp") 도 최종후보에 등록할것이다
-              - 추가로, MappingJacksonView는 defaultViews이기때문에 최종후보 뷰에 등록된다. 결국 총 뷰 후보는 3개
-              - View 인터페이스는 getContentType()를 통해서 각 뷰가 지원하는 콘텐트 타입을 얻을수있는데, JstlView 외에는 콘텐트 타입이 일치하지않으니, 2개는 탈락되고 최종적으로 JstlView가 선정된다
+  - 뷰
+    - 웹 환경에서는 보통 브라우저에 나타낼수있는 HTML을 만들어주는게 뷰의 역할이다
+    - 컨트롤러가 작업을 마치면 ModelAndView를 넘겨주는데 이때, 두가지 방법이있다
+      - 첫째는 View 타입의 오브젝트를 돌려주는것
+      - 둘째는 뷰 이름을 돌려주는것
+        - 여기서 뷰 리졸버가 사용되어 논리적인 뷰이름을 실질적인 뷰 오브젝트로 전환시켜준다
+    - 뷰의 종류
+      - InternalResourceView
+        - RequestDispatcher의 forward() 나 include()를 사용하는 뷰
+        - /WEB-INF/ 밑으로 접근가능
+        - JSP 뷰를 만든다면, 이를 ModelAndView에 넣으면 JSP로 포워딩해줌
+      - JstlView
+        - InternalResourceView 의 하위클래스
+        - locale(지역정보) 에 따라 달라지는 지역화(localization)된 메세지를 jsp에서 사용 가능
+          - message.propierteis(지역정보가 한국으로 설정되어있다면, message_ko.properties) 파일의 메세지를 JSTL의 fmt에서 사용가능
+      - RedirectView
+        - 실제 뷰가 생성되지않고, URL만 만들어져 다른 페이지로 리다이렉트됨
+        - 모델정보가 있다면, URL 뒤에 파라미터로 추가
+        - "redirect:~~" 이렇게 시작되면 뷰 리졸버가 인식해서 RedirectView로 만들어줌
+      - VelocityView
+      - FreeMarkerView
+      - MarshallingView
+      - AbstractExcelView, AbstractJExcelView, AbstractPdfView
+      - AbstractAtomFeedView, AbstractRssFeedView
+      - XsltView, TilesView, AbstractJasperReportsView
+        - AbstractJasperReportsView는 JasperReport를 이용해 CSV, HTML, PDF, Excel 다 만들수있음
+      - MappingJacksonJsonView
+        - 모든 오브젝트를 json으로 변환
+        - Http 응답의 content type은 application/json으로 지정
+    - 뷰 리졸버
+      - 논리적인 뷰이름을 실질적인 뷰 오브젝트로 전환시켜준다
+      - 보통 뷰 오브젝트를 캐싱하기때문에 뷰가 반복적으로 만들어지지않게 해서 성능면에서도 좋음
+      - 뷰 리졸버를 빈으로 등록하지않으면, DispatcherServlet의 디폴트 뷰 리졸버인 InternalResourceViewResolver가 사용
+      - 뷰 리졸버를 하나 이상을 빈으로 등록해서 사용할수있고, 여러개 사용할때는 order를 사용해서 뷰 리졸버의 순서를 지정하는게 좋음
+        - 순서를 지정했을때 먼저 선택되면 바로 해당 뷰로 리턴
+      - 종류
+        - InternalResourceViewResolver
+          - 되도록이면 default로 사용하지말고, prefix나 suffix를 지정해서 사용할것
+          - 클래스패스에 JTSL 라이브러리가 존재하면 JstlView를 사용하고, 그렇지않으면 InternalResourceView를 사용
+        - ResourceBundleViewResolver
+          - 클래스패스에있는 views.properties 파일을 기반으로 뷰를 매칭
+          - 모든 뷰를 파일에 일일이 정의해야하기때문에, 단독적으로 사용하는것은 비추
+            - InternalResourceViewResolver 와 함께 사용하여 우선순위를 지정해주어, ResourceBundleViewResolver 에서 못찾은놈은 InternalResourceViewResolver 에서 찾게해주도록 하는게 좋음(InternalResourceViewResolver의 order는 Integer.MAX가 기본값.. 상당히 후순위)
+          - 지역화기능 사용가능
+        - XmlViewResolver
+          - /WEB-INF/views.xml에 정의된 대로 뷰를 매칭
+          - 지역화기능 사용못함
+        - BeanNameViewResolver
+          - 빈 이름으로 뷰를 찾아서 매칭
+          - ModelAndView 에는 빈 이름을 전달해주고, 해당 빈 이름으로 등록되어있는 뷰를 사용
+            - 뷰 클래스와 jsp 위치 등 다 셋팅되어있음
+        - ContentNegotiatingViewResolver
+          - 같은 URL이지만 보내는 파라미터에 따라서 다르게 view를 제공해줄수있게함
+          - ContentNegotiatingViewResolver가 뷰를 결정하는 과정
+            1. 미디어 타입 결정
+                - 미디어 타입은 HTTP의 content type 에 대응
+                - 사용자의 요청정보로 사용자가 요청한 미디어 타입정보를 추출하게됨(아래 순서대로)
+                  1. URL 확장자를 가지고 결정 
+                  2. 포맷 지정하는 파라미터로 미디어 타입을 결정
+                       - "/hello?format=pdf" 라면, pdf 미디어 타입
+                  3. Accept 헤더의 설정 이용
+                  4. defaultContentType 프로퍼티에 설정해준 디폴트 미디어 타입을 사용(이게 어떻게 사용되는건지..)
+            2. 뷰 리졸버 위임을 통한 후보 뷰 선정
+               - 여러개의 뷰 리졸버를 사용하지만, 우선순위를 무시
+               - 뷰 이름을 처리할수있는 등록된 모든 뷰 리졸버를 통해서 뷰를 돌려받고 이를 모두 최종 뷰 선택을 위한 후보목록에 넣어둠
+               - ContentNegotiatingViewResolver에 사용할 뷰 리졸버 등록해놔야함
+            3. 미디어 타입 비교를 통한 최종 뷰 선정
+               - 요청정보에서 추출한 미디어 타입(1번의 결과)과 뷰 리졸버에서 찾은 뷰 목록(2번위 결과)을 매칭해서 사용할 뷰를 결정
+               - 여기서 ContentNegotiatingViewResolver에 defaultViews 등록한 뷰는 항상 후보목록에 올라가게됨
+            - 예시
+              - ContentNegotiatingViewResolver 셋팅정보
+                - mediaTypes : html / text/html, json / application/json
+                - viewResolvers 
+                  - BeanNameViewResolver
+                  - InternalResourceViewResolver
+                    - prefix : /WEB-INF/jsp/
+                    - suffix : .jsp
+                  - defaultViews
+                    - MappingJacksonView
+              - 위 셋팅정보를 기반으로 /content.html 이라는 URL에서 뷰 찾는과정
+                - URL의 .html을 보고 미디어 타입은 html로 결정된다
+                - ModelAndView에서 content라는 String으로 view name을 return을 했다면, viewResolvers에 등록된것을 바탕으로,  content로 등록되어있는 빈 이름의 뷰를 찾아서 최종 후보에 등록하고, 또한 new JstlView("/WEB-INF/jsp/content.jsp") 도 최종후보에 등록할것이다
+                - 추가로, MappingJacksonView는 defaultViews이기때문에 최종후보 뷰에 등록된다. 결국 총 뷰 후보는 3개
+                - View 인터페이스는 getContentType()를 통해서 각 뷰가 지원하는 콘텐트 타입을 얻을수있는데, JstlView 외에는 콘텐트 타입이 일치하지않으니, 2개는 탈락되고 최종적으로 JstlView가 선정된다
   - 기타전략
     - 핸들러 예외 리졸버
       - 해당 리졸버가 등록되어있다면, DispatcherServlet이 바로 서블릿컨테이너에게 던지지않고, 핸들러 예외리졸버가 처리
@@ -1149,8 +1149,9 @@
     - 하나의 사진으로 깔끔하게 정리
       - ![](MVC_easily_understand.png)
         - 출처: https://earth-95.tistory.com/42
-    - <span style="color:yellow">MockMvc는 에러발생시, 인터셉터시 postHandle과 afterCompletion 의 로그는 찍지않던데, 예외핸들러를 실행시킨뒤 afterCompletion은 왜 안탈까?</span>
-      - HandlerInterceptor로 확인해본바, preHandle의 로그는 남으나, postHandle과 afterCompletion의 로그는 안남음
+    - 컨트롤러에서 에러발생시, HandlerExceptionResolver 전략을 통해서 잡게되면, 인터셉터의 postHandle은 타지않는다! 즉,preHandler과 afterComplpetion은 타게됨.. 그래서 에러 관련해서 알람발생이나 DB저장 등의 작업을 하고싶으면 afterCompletion에서 진행할것! 
+      - 아마 컨트롤러에서 에러발생하면 인터셉터의 postHandle 호출하는 작업을 패스하고 뷰 관련된 작업 다 마친뒤에 마지막에 afterCompletion을 호출하고 끝나는듯함
+      - HandlerInterceptor로 확인해본바, preHandle,afterCompletion의 로그는 남으나, postHandle의 로그는 안남음
     - 컨트롤러 관련 테스트한거는 toby-spring 프로젝트에있으니 꼭 참고할것!
     - [validation 관련 설명 굿](https://jyami.tistory.com/55)
     - RequestMapping에서 produces 로 요청조건을 주면 client에서 요청시 Accept 헤더에 요청 조건에 맞는 값을 넘겨주어야한다
