공부한거 추가

--- a/스터디/토비의스프링/토비의 스프링2.md
+++ b/스터디/토비의스프링/토비의 스프링2.md
@@ -1088,9 +1088,11 @@
         ``` 
       - @Valid와 @RequestBody
         - 3.1부터는 메세지 컨버터 이용하는 @RequestBody 파라미터에도 사용가능
-        - ~~BindingResult 또한 사용가능~~
-          - 사용불가!! @RequestBody에서 @Valid로 검증하면 예외처리는 인터셉터(ControllerAdvice)나 @ExceptionHandler 로 할것!
-          - BindingResult로 넘어가지않기때문에 그냥 에러 뱉는다.. 그걸 잡아서 처리해야하는 개념으로 접근해야하기에 인터셉터나 ExceptionHandler 사용필요..
+        - BindingResult 또한 사용가능
+          - RequestBody가 Jackson활용해서 json 컨버터 실행될때, Enum 또한 알아서 컨버터해준다.. Enum을 위해서 Formatter를 따로 등록할 필요없음
+            - 여기서 만약 에러나면, BindingResult에 검증에러가 들어가지않고, HttpMessageNotReadableException 에러를 떨군다.. 그래서 해당 에러를 잡으려면 ControllerAdvice나 @ExceptionHandler로 잡아야한다..
+            - 물론 이렇게되면 인터셉터에서 posthandle은 작동안하고, prehandle과 afterCompletion 이 작동
+          - BindingResult로 잡힌다고해서 자동으로 error등록되지않음.. 이에 관련한 처리를 해주어야함!(굳이 이럴바에는 BindingResult로 잡는거보단 ControllerAdvice쪽으로 아예 던져버리는게 낫지않을까나)
       - UriComponentsBuilder
         - URI 생성하거나 가공할때 사용하면 좋음..
         - static으로 사용
@@ -1156,3 +1158,9 @@
     - [validation 관련 설명 굿](https://jyami.tistory.com/55)
     - RequestMapping에서 produces 로 요청조건을 주면 client에서 요청시 Accept 헤더에 요청 조건에 맞는 값을 넘겨주어야한다
       - ex. produces= application/json 이라면, curl로 전송할때 curl -i -H "Accept: application/json" url.. 이런식으로 요청해야한다!
+    - @RequestBody를 사용해서 컨버터로 Jackson을 사용하게될때, Enum타입인경우 Jackson이 알아서 컨버팅을 해주는데, 그때 숫자값을 넘겨버리면 Enum 내부의 배열을 사용해서 가져온다.. 즉, 숫자값이 Enum의 value값이랑 매칭은안된다.. 
+      - <span style="color:yellow">아마 jackson에 이와 관련한 전략을 변경하여 매칭할수있지않을까..</span>
+    - Service나 Bean에서 @Vaild를 사용하기위해서는 타입레벨에서 @Validated 를 추가해야한다!
+    - [validation관련 다양하고 유용한 정리](https://meetup.toast.com/posts/223)
+    - REST 방식일때는 어떻게 검증과 예외처리하는게 깔끔할까?
+      - 
