--- a/스터디/토비의스프링/토비의 스프링2.md
+++ b/스터디/토비의스프링/토비의 스프링2.md
@@ -190,6 +190,7 @@
           - property 파일을 읽어서 메타정보의 값 정보에서 치환자(${}) 를 후처리기 시점에 찾아서 적절한 value로 바꿔준다!
           - 빈 팩토리 후처리기가 빈 후처리기보다 앞서서 있는듯함
             - 필드에 @Value로 셋팅하였을때, 생성자 호출하는 시점에는 값이 주입되어있지않은데, 메소드 수정자 주입시에는 값이 주입되어있었음.. (더 확실히 알기위해서 좀더 찾아봐야할듯)
+            - 빈 팩토리 후처리기는 왠지 오브젝트 생성과 초기화 사이에 이루어지는듯하다..
       - 능동변환(SpEL)
         - #{} 사용
         - 표현식을 사용해 다른 빈 오브젝트에 직접 접근할수도있음
@@ -1163,4 +1164,353 @@
     - Service나 Bean에서 @Vaild를 사용하기위해서는 타입레벨에서 @Validated 를 추가해야한다!
     - [validation관련 다양하고 유용한 정리](https://meetup.toast.com/posts/223)
     - REST 방식일때는 어떻게 검증과 예외처리하는게 깔끔할까?
-      - 
+
+- 6장 테스트 컨텍스트 프레임워크
+  - 스프링은 테스트가 사용하는 컨텍스트를 캐싱해서 여러 테스트에서 하나의 컨텍스트를 공유할 수 있는 방법을 제공
+  - 테스트용 컨텍스트의 공유는 메소드내 뿐 아니라, 클래스 사이에서도 가능!
+    - 엄밀하게 이야기하면 테스크 컨텍스트 프레임워크가 애플리케이션 컨텍스트를 관리해서 같은 컨텍스트 사용하면 새로 만드는것이 아니라 계속 사용할수 있도록 해주는것임!
+      - 참고로 테스트클래스는 빈이아니지만, @Autowired와 같은 어노테이션 등을 사용해서 DI 가능
+    - A클래스에 컨텍스트 사용했으면, B클래스 테스트실행할때 A클래스 사용했던거 그대로 사용
+    - 물론 동일한 설정 파일 아니면 새로이 만든다!
+  - @ContextConfiguration 으로 컨텍스트 파일을 지정할수있는데, 이는 상속가능..
+    ```java
+      @ContextConfiguration("common-context.xml")
+      public class SuperTest{...}
+
+      @ContextConfiguration("sub-context.xml")
+      public class SubTest exteds SuperTest{...} //요 클래스는 SuperTest에서 읽어온 설정파일을 사용할수있음.. 같으면 오버라이딩
+    ``` 
+  - 공유 컨텍스트 사용시 주의할점
+    - 테스트는 언제나 고립돼서 동작해야함
+    - 테스트 결과도 자신이 검증하는 코드가 바뀌지않는 한 항상 일정해야함!
+    - 그러나, 임의로 컨텍스트를 수정해서 테스트할때가 있는데, 이때는 @DirtiesContext를 사용할것!
+      - 해당 어노테이션을 사용한다는것은, 더렵혀진 Context라고 지정하는것인데, 그로인해 해당 테스트 이후에 context는 공유되지않고, 새롭게 만들어짐!
+      - 메소드레벨뿐 아니라, 클래스레벨에도 지정할수있는데, 테스트 클래스 내의 모든 메소드의 테스트가 끝난 후에 컨텍스트를 새로 만든다
+  - 트랜잭션 테스트
+    - DB 테스트시 테스트간에 변경이 일어난 부분은 테스트가 끝남과 동시에 원상복구를 해줄 필요가 있는데(트랜잭션-롤백), 아래 두가지 방법을 활용해서 하면 좋음
+      - 코드로 트랜잭션 진행
+        - PlatformTransactionManager를 주입받아서 직접 사용 
+          - 스프링에서 제공해주는 템플릿 또한 있는데(TransactionTemplate), 여기에 PlatformTransactionManager을 넘겨주어 생성하면 좀더 손쉽게 테스트가능(디폴트 사용하고싶지않으면, TransactionDefinition에 트랜잭션 속성을 셋팅해서 넘겨줄수도있음) 
+      - 어노테이션을 활용하여 트랜잭션 진행  
+        - @Transactional 사용
+          - "트랜잭션 시작 + 강제롤백" 해줌
+            - 강제롤백싫으면 @Rollback(false) 을 같이 선언해주면됨
+          - @Before나 @After 모두 트랜잭션 안에 포함돼서 실행된다!
+            - 만약 트랜잭션 전,후에 실행되어야한다면, @BeforeTransaction, @AfterTransaction 사용하면됨
+          - 클래스 레벨에 지정가능함
+            - 이는 모든 메소드에 @Transactional이 적용된것
+            - 특정 메소드에 트랜잭션 속성을 달리하고싶으면 해당 메소드에서 다시 @Transactional을 정의해주면된다
+    - ORM 롤백을 테스트할때 주의사항
+      - ORM은 내부적으로 캐시를 사용하여 한번에 DB에 반영하도록하는 특징이 있어서, 테스트를 위해서는 특정변경이 있을때 flush를 호출해주는것이 필요
+    - DBUnit 사용
+      - DBUnit은 DB가 사용되는 테스트를 만들때 유용하게 쓸수있는 지원라이브러리
+      - XML이나 엑셀파일에 준비해둔 테스트 데이터를 DBUnit의 명령을 이용해 삽입할수있음
+      - 아래참고
+      ```java
+        @Autowired DataSource datasource;
+
+        @Test
+        @Tranactional
+        public void userQuery(){
+          IDatabaseConnection connection=new Database(DataSourceUtils.getConnection(this.datasource)); // @Transactional에 의해 시작된 현재 트랜잭션이 사용하는 DB커넥션을 가져와 DBUnit용으로 변환
+
+          IDataSet dataset=new FlatXmlDataSet(...); // XML로 만들어진 테스트 데이터 파일을 지정. 엑셀, CSV로도 만들수잇음
+          
+          DatabaseOperation.CLEAN_INSERT.execute(connection,dataset); //테스트 데이터 삽입. 테스트가 끝나면 모두 롤백
+
+          List<User> users=dao.findUSerByCondition(...); //테스트 데이터 이용해서 테스트 진행
+          assertThat(...);
+      
+        }
+      ```
+
+  - 6장을 통한 기타 팁
+    - 테스트를 특정 profile에서 진행해야한다면, 커맨드로 계속 넘겨줄 필요 없이, 테스트 클래스에 @ActiveProfiles("") 을 사용하여 특정 profile이 작동하도록 셋팅하는게좋음
+
+- 7장 스프링의 기타 기술과 효과적인 학습방법
+  - 빈을 효과적으로 분석하는 방법
+    - 오브젝트가 빈으로 사용된다는 의미
+      1. 다른 빈에 의해 DI돼서 사용되는 서비스. 즉, 클라이언트를 갖는다 (다른놈한테 호출당함)
+      2. 다른 빈이나 정보를 의존하고있다 (내가 호출함)
+    - 위 두가지 특징을 잘 알고 싶다면, 빈으로 등록된 클래스의 구현 인터페이스와 프로퍼티 목록을 살펴보면됨
+      - 인터페이스를 통해서 클라이언트와 어떤 관계를 맺고있는지 알수있고, 제공하는 기능을 분석가능
+        - 인터페이스는 빈이 제공하는 기능을 정의한것(인터페이스 분리원칙)
+      - 프로퍼티는 빈의 확장 포인트를 파악할수있음
+        - ex. 프로퍼티로 받는게 인터페이스라면 데코레이터 패턴을 활용해서 확장가능!
+        - 프로퍼티로 전략들을 제공받게되는 경우가 많은데(인터페이스 구현체들), 이를 통해서 어떻게 확장가능한지 알수있음
+      - 스프링은 Datasource를 활용하여 DataSource 타입의 프로퍼티를 갖는 빈 사이에 데코레이터 패턴이나 프록시 패턴을 이용해 부가기능을 또는 접근제어 기능을 제공해주는 빈을 만들려고할때 유용한 기반 클래스를 제공
+        - DelegatingDatsource
+          - LazyConnectionDataSourceProxy
+            - @Transactional 이 선언된 메소드 호출시부터 커넥션을 가져오는게 아니라, 쿼리가 실행되는 그때까지 커넥션을 가져오는것을 지연시킴! 보통 @Transactional을 Service에 선언을 하게되는데, 그로 인해서 DAO랑 상관없는 비지니스 로직이 돌때, 계속해서 트랜잭션을 잡고있지않도록 해주어 자원을 효율적으로 사용할수있도록 해줌
+          - AbstractRoutingDataSource
+            - DB를 ReadOnly용, ReadWrite용 두개를 놓았을때 사용하면 좋음!
+            - 키를 사용해서 DataSource를 맵핑하고, 이를 룩업하여 사용
+  - IoC 컨테이너 DI
+    - 어플리케이션 컨텍스트는 자신의 확장 포인트 인터페이스를 구현한 빈을 찾아서 스스로 DI함.. 엄밀히 말하면 DL!
+    - 가장많이 사용되는 IoC 컨테이너의 확장포인트는 BeanPostProcessor와 BeanFactoryPostProcessor
+      - BeanPostProcessor(빈 후처리기)
+        - 빈 오브젝트를 생성하는 시점에서 사용
+          - postProcessBeforeInitialization 메소드 : 빈 오브젝트 처음 만들어지고 초기화 메소드가 호출되기 전에 실행
+          - postProcessAfterInitailization 메소드 : 초기화 메소드 호출 이후에 실행
+        - 해당 인터페이스를 구현해서 등록하면, 새로운 빈이 등록되었을때 BeanPostProcessor 구현체가 빈을 받아서 구현한 적절한 동작을 수행한다
+          - @Autowired나 @Inject 같은 어노테이션을 이용해서 빈 주입하는것도 BeanPostProcessor를 구현한 빈이 해주는 작업
+            - 스캐닝을 통해 등록된 빈을 애노테이션DI를 담당하는 BeanPostProcessor가 받아서 필드나 메소드의 @Autowired를 확인하고, 그에 따라 필요한 빈을 DI해줌
+          - 자동 프록시 생성기도 같은원리!
+      - BeanFactoryPostProcessor(빈 팩토리 후처리기)
+        - 빈 팩토리에 대한 후처리기는 빈 설정 메타정보가 모두 준비됐을때 빈 메타정보 자체를 조작하기 위해 사용
+          - postProcessBeanFactory 메소드 : 빈의 모든 메타정보를 담고 있는 ConfigurableListableBeanFactory 타입의 오브젝트를 전달해주는데, 바로 컨테이너 자신을 보내주는것.. 이를 이용해서 빈의 메타정보를 조작가능.. 뿐만아니라 새로운 빈을 등록도 가능..
+        - 구현체 PropertySourcesPlaceholderConfigurer 가 있는데, 이는 @Value 로 선언한곳에 적절한 프로퍼티 값을 넣어주는 역할
+          - (좀 다른 내용)이런 빈 팩토리 후처리기가 @Value를 사용한 빈 클래스보다 우선되어 적용이 되어있어야 @Value에 정상적으로 값을 전달받게되는데, 이렇게 빠르게 빈 팩토리 후처리기를 등록해야할때 static을 사용하여 @Bean을 등록하면 가능하다
+            - [참고사이트](https://mangkyu.tistory.com/177)
+  - 태스크 실행과 스케줄링
+    - 태스크(task) : 독립적인 스레드 안에서 동작하도록 만들어진 오브젝트(독립적으로 실행가능한 오브젝트!)
+    - 태스크 실행기(TaskExecutor) : 스프링에서 task를 실행하도록 만들어진 추상화된 인터페이스
+      - 자바5의 taskExecutor뿐아니라, CommonJ, Quartz같은 다른 태스크 실행기 또한 사용가능하도록 만들기위해 추상화
+      - taskExecutor가 꼭 반드시 별도의 스레드에서 실행해야하는것은 아니지만, 대부분의 TaskExecutor가 추상화한 기술은 비동기적으로 독립적인 스레드에서 실행되며, 주로 스레드 풀을 사용하는 방식
+      - 구현체
+        - ThreadPoolExecutor
+          - JDK의 ThreadPoolExecutor에 대한 어댑터 클래스
+          - corePoolSize, maxPoolSize, queueCapacity 같은 속성을 프로퍼티에 이용
+          - 지정된 크기의 스레드 풀을 이용하며, 작업요청은 큐를 통해관리
+          - <span style="color:yellow">좀더 상세하게 찾아보자</span>
+        - SimpleThreadPoolTaskExecutor
+          - Quartz의 SimpleThreadPool을 이용
+        - WorkManagerTaskExecutor
+          - CommonJ 작업관리자의 태스크 실행기에 대한 어댑터
+    - TaskScheduler
+      - 주어진 테스크를 조건에 따라 실행하거나 반복하는 작업을 수행
+      - Trigger 인터페이스를 사용해서 유연한 실행조건 만들수있음
+        - 대표적으로 CronTrigger가 있음
+          - cron 서버의 실행시간 설정 포맷 활용가능
+      - 구현체
+        - ThreadPoolTaskScheduler
+        - TimerManagerTaskScheduler
+          - CommonJ
+    - 어노테이션을 이용한 스케줄링과 비동기 태스크 실행
+      - 스케줄링 또는 비동기 태스크로 진행되어야할 메소드위에 어노테이션 지정하면됨
+      - @Scheduled와 @Async가 사용할 태스크 실행기
+      - @Scheduled
+        - @Scheduled(fixedDelay=60000) : 작업이 끝난 시점부터 일정시간 60초 뒤에 동작
+        - @Scheduled(fixedRate=60000) : 작업이 끝난거랑 상관없이 60초마다 동작
+        - @Scheduled(cron="0 0 12 1 * MON-FRI") : cron 포맷
+        - *파라미터 가질수없고 반드시 void형의 리턴타입이어야함, 태스크 스케줄러 빈 등록필요
+      - @Async
+        - 비동기 사용시, 적절한 ThreadPool 지정은 필수!(디폴트 노노)
+        - *리턴타입은 void 또는 Future 타입, 태스크 실행기 등록필요
+    - ThreadPoolTaskExecutor 사용방법 확인
+      - pool이나 queue가 어떻게사용되고, pool은 어떻게 증가되는지, 적절한 스레드 풀 사이즈 등
+      - ThreadPoolTaskExcecutor 이 현재 기본값임
+      - core와 max가 같지않다면 적절한 queue 셋팅필요
+        - 같으면 상관없음(그냥 큐에 계속 대기시켰다가 여유생기면 가져오니깐)
+      - 스레드 수 = 사용 가능한 코어 수 * (1+대기 시간/서비스 시간)
+        - 출처: https://yaaam.tistory.com/entry/스레드-풀Thread-Pool-스레드-풀의-적정-크기는-스레드-풀의-적절한-사이즈는 [시 쓰는 개발자]
+      - ThreadPoolTaskExcecutor 설정 (스프링부트 기본값!)
+        - pool-size
+          - 스레드 풀 사이즈
+          - "5-10"과 같이 명시가능
+            - corePoolSize가 5이고, maxPoolSize가 10인것을 나타냄
+            - 하나만 명시되어있다면 corePoolSize=maxPoolSize
+        - queue-capacity
+          - 요청받은 작업을 저장할 최대갯수. 기본값은 Integer.MAX_VALUE
+          - corePoolSize보다 이상의 task가 들어오게되면 바로 maxPoolSize만큼 하나씩 증가하는게아니라, queue에 작업이 들어가서 대기하게된다.. 지정한 queue에 사이즈보다 커질경우, 스레드 풀에 스레드를 하나 추가하게됨.. 즉, corePoolSize와 maxPoolSize가 다르다면, queue-capacity를 조정할 필요가있음
+        - reject-policy
+          - queue도 가득차고 maxPoolSize를 만족했을때, 작업이 들어오게되면(작업 더이상 받아들일수 없는상태) reject하는 정책을 지정
+          - 기본적으로 다음 4가지 방법을 선택할 수 있고 직접 구현해서 설정하는 것도 가능하다.
+            - ABORT : 작업이 추가되지 않고 RejectedExecutionException을 던지게 된다. (기본값)
+            - CALLER_RUNS : 작업을 등록하려 한 스레드에서 작업을 실행하게 함. 따라서 그 시간 동안 스레드 풀의 스레드는 큐의 작업을 처리할 시간을 가지게 된다.
+            - DISCARD : 추가하려했던 작업을 아무 반응 없이 제거
+            - DISCARD_OLDEST : 큐에서 가장 오래된 항목 제거 후 추가
+        - shutdown
+          - ThreadPoolTaskExecutor 빈이 destroy될 때 shutdown 처리되게 되는데, 기본적으로는 작업을 더 이상받지 않고, 만약 실행 중인 작업이 있다면 중지시키게(interrupt) 된다. 만약 작업이 끝날 때까지 대기하게 하고 싶다면, 다음 설정값으로 조정할 수 있다.
+            - waitForTasksToCompleteOnShutdown : shutdown 시 대기할지 여부 true/false, 기본값 false.
+            - awaitTerminationSeconds : 대기할 경우 대기할 초
+            - *위 두 속성은 ThreadPoolTaskExecutor 빈 직접 정의 시 설정할 수 있다.
+        - [참고사이트](https://sheerheart.tistory.com/entry/%EC%8A%A4%ED%94%84%EB%A7%81-Async%EB%A5%BC-%ED%86%B5%ED%95%9C-%EB%B9%84%EB%8F%99%EA%B8%B0-%EC%B2%98%EB%A6%AC-%EB%B0%8F-%EC%84%A4%EC%A0%95%EA%B0%92)
+        - [내용은 비슷한데 좀더 보기 좋게 잘 나와있음](https://kapentaz.github.io/spring/Spring-ThreadPoolTaskExecutor-%EC%84%A4%EC%A0%95/#)
+  - 캐시 추상화
+    - AOP를 이용한것!
+    - 추상화 되어있기때문에 캐시 기술이 바뀌어도 괜춘!
+    - 동일한 요청이 들어오면 캐시에 보과내두었떤거를 돌려주니, 빠를뿐아니라 리소스를 아낄수있음
+    - 동일한 결과 리턴하는 작업이 많고, 각 작업의 시간이 오래걸리는 경우에 사용하면좋다!
+    ```java
+      @Cacheable("product") //캐시에 product라는 이름으로저장
+      public Product bestProduct(String productNo){ //productNo는 product의 key값
+        //리턴타입이 Product인데, product라는 이름에 productNo의 key로 Product오브젝트가 저장됨
+        ...
+      }
+
+      //key는 여러개가 가능하고, 특정 key만 지정도 가능(SpEL 사용하여 가능)
+      @Cacheable(value="product", key="#condition.productNo") //condition 객체의 productNo 필드 
+      public Product bestProduct(SearchCondition condition){ 
+        ...
+      }
+
+      @CacheEvict("bestProduct") //bestProduct라고 저장된 캐시 삭제(새로이 읽기위함)
+      public void refreshBestProduct(){
+        ...
+      }
+
+      @CacheEvict(value="bestProduct", key="#product.productNo") //특정 productNo만 캐시제거 가능
+      public void updateProduct(Product product){
+        ...
+      }
+
+      @CachePut : 저장된 캐시내용 사용하지않고, 그냥 저장만 계속함.. 즉, 계속 메소드호출
+
+      @EnableCaching : 해당 어노테이션 선언해주어야 기본 빈들이 등록됨
+
+    ```
+    - 캐시 매니저
+      - 캐시기술을 지원하는 캐시매니저를 빈으로 등록해주어야한다!
+      - EhCacheCacheManager: 가장 인기있는 프레임워크인 EhCache를 지원하는 캐시매니저
+  - @Enable 애노테이션을 이용한 빈 설정정보 모듈화
+    - 모듈화의 가장 큰 이유는 효과적인재사용!
+    - 빈 설정정보를 모듈화 하는 이유는 반복적이고 복잡한 빈 설정을 독립시켜서 편리하게 재사용하기위함
+    - 모듈은 자기 책임을 명확히하고, 간결한 인터페이스를 통해서 외부와 연결되어야함
+    - @Import 사용
+      - 설정정보를 변경하지 않아도 되면 이를 사용
+      - 설정정보 변경해야한다면 @Import는 사용하기어려움(파라미터를 넘길수없으니..)
+    - @Configuration 클래스 상속과 오버라이딩을 이용한 확장
+      - 오버라이딩해서 설정정보를 변경할수는 있으나, 상속특성상 한 클래스에서 두개이상의 상속은 불가하니, 여러개의 @Configuration 클래스는 변경할수가 없음
+      - 또한, 오버라이딩을 잘못하게되면 전체 설정을 엉망으로 만들수도있음..
+    - @Enable전용 애노테이션과 ImportAware 인터페이스
+      - @Enable로 시작하는 애노테이션들은 모듈화된 빈 설정정보를 추가하면서 애노테이션의 엘리먼트를 사용해서 옵션들을 제공할수있도록 해주는데, ImportAware 인터페이스를 활용하면 가능!
+        - 물론, 꼭 Enable로 시작해야하는것은 아니지만, 스프링의 관례이니 굳이 벗어나지말것
+    - 빈 설정자
+      - 엘리먼트로는 고정된 값만 가능하기때문에, 코드를 이용해 복잡한 설정을 추가해야할 필요가 있을때 사용
+      - 대표적으로 WebMvcConfigurer가 있는데, 이를 통해서 @EnableWebMvc가 제공하는 기본 빈 설정정보에 추가해주는 역할을 한다
+      - 자바 코드를 이용한 빈 설정정보 확장이 필요한 경우 @Configuration 상속보다는 @Enable 애노테이션과 빈 설정자를 활용하는 방법이 낫다!(인터페이스니깐 여러개 가능하므로!)
+    - ImportSelector
+      - 애노테이션 엘리먼트에 따라 import하는 설정정보 클래스를 달리하고 싶다면 ImportSelector를 구현!
+      - @Import에 ImportSelector를 구현한 클래스를 넣어줄것!
+        - ImportSelector를 구현한 클래스에 설정정보 클래스를 셋팅해서 자기 자신의 빈 이름을 리턴해주면 무한 뺑뺑이 돌음..
+        - ImportSelector를 구현한 클래스가 아닌, 별도의 설정클래스를 지정해야함!
+  - 7장을 통한 기타 팁
+    - 서브인터페이스는 구현 클래스들을 다시 특정 그룹으로 구분할수있는 공통 특정을 정의하는 경우에 사용
+    - 인터페이스 타입의 프로퍼티 있으면, 구현체들이 무엇이 있는지 확인해볼것!!
+    - RestTemplate도 RMI의 하나라는거..
+      - [RestTemplate 개념 및 사용방법 정리 굿](https://sjh836.tistory.com/141)
+    - ClassPathResource : 지정한 클래스 기준으로 설정파일 경로 셋팅가능
+
+
+
+
+
+
+
+
+- 스레드 풀
+  - 자원해제
+    - 스레드 풀에 속한 스레드는 기본적으로 데몬스레드(주 스레드를 서포트하기 위해 만들어진 스레드, 주 스레드 종료시 강제 종료)가 아니기 때문에 main 스레드가 종료되어도 작업을 처리하기 위해 계속 실행 상태로 남아있다. 즉 main() 메서드가 실행이 끝나도 어플리케이션 프로세스는 종료되지 않는다. 어플리케이션 프로세스를 종료하기 위해선 스레드 풀을 강제로 종료시켜 스레드를 해체시켜줘야 한다. 
+    - ExecutorService 구현객체에서는 기본적으로 3개 종료 메서드를 제공한다.
+      - excutorService.shutdown();
+        - 작업큐에 남아있는 작업까지 모두 마무리 후 종료 (오버헤드를 줄이기 위해 일반적으로 많이 사용.)
+      - excutorService.shoutdownNow();
+        - 작업큐 작업 잔량 상관없이 강제 종료
+
+      - excutorService.awaitTermination(long timeout, TimeUnit unit);
+        - 모든 작업 처리를 timeout 시간안에 처리하면 true 리턴 ,처리하지 못하면 작업스레드들을 interrupt()시키고 false리턴 
+
+  - 실행
+    - execute();
+      - 작업 처리 결과를 반환하지 않는다.
+      - 작업 처리 도중 예외가 발생하면 스레드가 종료되고 해당 스레드는 스레드 풀에서 제거된다. 
+      - 다른 작업을 처리하기 위해 새로운 스레드를 생성한다.
+    - submit();
+      - 작업 처리 결과를 반환한다.
+      - 작업 처리 도중 예외가 발생하더라도 스레드는 종료되지 않고 다음 작업을 위해 재사용
+      - 스레드의 생성 오버헤드를 방지하기 위해서라도 submit() 을 가급적 사용한다.
+
+  - [참고사이트](https://limkydev.tistory.com/55)
+
+
+  - [forkJoinPool 설명굿](https://hamait.tistory.com/612)
+
+
+  - [토비의봄TV "자바와 스프링의 비동기 기술" 정리](https://jongmin92.github.io/2019/03/31/Java/java-async-1/)
+    - Future
+    - FutureTask
+    - ListenableFuture
+    - 
+    - 서블릿 비동기관련
+      - return type을 Callable로
+      - return type을 DefferedResult로(지연된 결과)
+      - return type을 ResponseBodyEmitter로
+
+<br><br><br><br><br><br><br><br><br><br>
+- 빈들 등록하고 초기화 하는 곳..
+  - <span style="color:yellow">나중에 기회되면 제대로 분석해볼것</span>
+```java
+
+//AbstractApplicationContext 클래스
+
+@Override
+	public void refresh() throws BeansException, IllegalStateException {
+		synchronized (this.startupShutdownMonitor) {
+			StartupStep contextRefresh = this.applicationStartup.start("spring.context.refresh");
+
+			// Prepare this context for refreshing.
+			prepareRefresh();
+
+			// Tell the subclass to refresh the internal bean factory.
+			ConfigurableListableBeanFactory beanFactory = obtainFreshBeanFactory();
+
+			// Prepare the bean factory for use in this context.
+			prepareBeanFactory(beanFactory);
+
+			try {
+				// Allows post-processing of the bean factory in context subclasses.
+				postProcessBeanFactory(beanFactory);
+
+				StartupStep beanPostProcess = this.applicationStartup.start("spring.context.beans.post-process");
+				// Invoke factory processors registered as beans in the context.
+				invokeBeanFactoryPostProcessors(beanFactory); //********여기서 beanFactortyPostProcess 실행됨.. *********
+
+				// Register bean processors that intercept bean creation.
+				registerBeanPostProcessors(beanFactory);
+				beanPostProcess.end();
+
+				// Initialize message source for this context.
+				initMessageSource();
+
+				// Initialize event multicaster for this context.
+				initApplicationEventMulticaster();
+
+				// Initialize other special beans in specific context subclasses.
+				onRefresh();
+
+				// Check for listener beans and register them.
+				registerListeners();
+
+				// Instantiate all remaining (non-lazy-init) singletons.
+				finishBeanFactoryInitialization(beanFactory); //********** 여기서 사용자가 등록된 bean들이 실행됨 ***********
+
+				// Last step: publish corresponding event.
+				finishRefresh();
+			}
+
+			catch (BeansException ex) {
+				if (logger.isWarnEnabled()) {
+					logger.warn("Exception encountered during context initialization - " +
+							"cancelling refresh attempt: " + ex);
+				}
+
+				// Destroy already created singletons to avoid dangling resources.
+				destroyBeans();
+
+				// Reset 'active' flag.
+				cancelRefresh(ex);
+
+				// Propagate exception to caller.
+				throw ex;
+			}
+
+			finally {
+				// Reset common introspection caches in Spring's core, since we
+				// might not ever need metadata for singleton beans anymore...
+				resetCommonCaches();
+				contextRefresh.end();
+			}
+		}
+	}
+```
