--- a/스터디/토비의스프링/토비의 스프링2.md
+++ b/스터디/토비의스프링/토비의 스프링2.md
@@ -1141,9 +1141,14 @@
       - \<mvc:default-servlet-handler/\> 이거를 사용하게되면, 똑같이 DispatcherServlet으로 모든 url이 전달은 되나, 핸들러매핑이 적절한 핸들러를 찾지못하게되면, 해당요청은 정적리소스라고 판단하고 디폴트 서블릿으로 넘기게된다
     - \<url:resource/\> 는 필요할때 확인.. p630
     - @RequestMapping이 타입레벨에는 선언안되어있고, 메소드레벨에서만 사용했을때 정상동작이 안되었었으나(스프링 3.0), 스프링 3.1부터는 메소드레벨에만 선언해도됨 
-    - Post로 전송할때 parameter로 보내는것과 body 보내는거는 다른거다......
-      - parmater를 오브젝트로 변경해주는게 @ModelAttribute
-      - body를 오브젝트로 변경해주는게 @RequestBody
+    - Post로 전송할때 query string 또는 form-data로 보내는것과, body에 raw(like json)로 보내는거는 다른거다......
+      - query string 또는 form-data를 오브젝트로 변경해주는게 @ModelAttribute
+        - 좀더 엄밀히 이야기하자면 키/값 쌍의 폼 데이터를 보내는것들은 @ModelAttribute로 매핑가능
+        - 쿼리스트링으로 전달해줘도 매핑가능하고, body에 form-data, x-www-form-urlencoded 로 전달해도 매핑가능 
+      - body를 오브젝트로 매핑해주는게 @RequestBody(@RequestBody는 body의 모든값을 변경해주는데, 그러다보니 form-data를 body에 넣었을때 @RequestBody가 객체로변환하려면 에러뜬다!)
+      - HTML의 \<form\>태그에 method="POST" 또는 method="GET"(기본값)을 모두 사용할 수 있다. 만약에 GET 메소드를 사용하면 모든 form data는 URL로 인코딩되어 action URL에 query string parameters로 전달된다. POST 메소드를 사용하면 form data는 HTTP request의 message body에 나타날 것이다.
+        - form 태그에 post로 보내면, 기본 content-type은 x-www-form-urlencoded이고, form 데이터는 body에 key=value&key2=value2... 으로 들어간다...
+      - [참고사이트](https://im-developer.tistory.com/166)
     - 컨트롤러 메소드 파라미터에 별도 어노테이션없이 그냥 클래스타입이 오게되면(ex. User), 이는 param으로 파싱을 한다. 즉, 백날 body에 json 넣어서 요청해도 절대 받지않는다.. body는 무조건 @RequestBody를 써야가능..!
     - [REST 사용시 ERROR handling 하는 가이드](https://www.baeldung.com/exception-handling-for-rest-with-spring)
       - [spring boot error 페이지로 매핑하는 구조](https://goddaehee.tistory.com/214)
