공부한거 추가

--- a/스터디/토비의스프링/토비의 스프링2.md
+++ b/스터디/토비의스프링/토비의 스프링2.md
@@ -37,7 +37,7 @@
       - applicationContext가 상속받고있음
     - ApplicationEventPublisher
       - 컨테이너 안의 빈 오브젝트간에 이벤트 발생 & 전달받을수있는기능
-      - 굳이 컨테이너에 의존적인 방법 사용할 필요가 없기에 거의 사용안함(필요하면 빈 사이에 독자적인 이벤트/리스터 구성을 사용하면됨)
+      - 굳이 컨테이너에 의존적인 방법 사용할 필요가 없기에 거의 사용안함(필요하면 빈 사이에 독자적인 이벤트/리스너 구성을 사용하면됨)
     - systemProperties
       - JVM관련 설정값들
       - ```System.getProperty("")``` 와 같이 쓰는것이 좋음 (Property로 구현되어있기에, 타입으로 가져오기가좀.. 굳이 가져오려면 @Resource Properties systemProperties)
@@ -205,6 +205,7 @@
     - @EnableTransactionnManagement
       - 트랜잭션 사용할때 사용.. @Transactional 사용하기 위한 AOP 관련 빈들을 등록해줌
       - 스프링부트에서도 반드시 써야하는것인지 확인필요(어떤 의존성을 불러오면 자동으로 등록되는것같긴한데.. 확인필요하다!)
+        - DB관련 의존성을 주입하면 알아서 트랜잭션 관련 인프라 빈들은 등록됨(스프링부트)
     - 프로퍼티 파일은 저장소에 올리지 말자! 그냥 sample properties만 올릴것!
     - 롤백 테스트는 내장형 DB로 확인하는것도 좋다!
     - -D 옵션은 JVM 옵션 (-Dspring.profile.active=prod)
@@ -1265,7 +1266,7 @@
       - BeanFactoryPostProcessor(빈 팩토리 후처리기)
         - 빈 팩토리에 대한 후처리기는 빈 설정 메타정보가 모두 준비됐을때 빈 메타정보 자체를 조작하기 위해 사용
           - postProcessBeanFactory 메소드 : 빈의 모든 메타정보를 담고 있는 ConfigurableListableBeanFactory 타입의 오브젝트를 전달해주는데, 바로 컨테이너 자신을 보내주는것.. 이를 이용해서 빈의 메타정보를 조작가능.. 뿐만아니라 새로운 빈을 등록도 가능..
-        - 구현체 PropertySourcesPlaceholderConfigurer 가 있는데, 이는 @Value 로 선언한곳에 적절한 프로퍼티 값을 넣어주는 역할
+        - 구현체 PropertySourcesPlaceholderConfigurer 가 있는데, 이는 @Value 로 선언한곳에 적절한 프로퍼티 값을 넣어주는 역할 
           - (좀 다른 내용)이런 빈 팩토리 후처리기가 @Value를 사용한 빈 클래스보다 우선되어 적용이 되어있어야 @Value에 정상적으로 값을 전달받게되는데, 이렇게 빠르게 빈 팩토리 후처리기를 등록해야할때 static을 사용하여 @Bean을 등록하면 가능하다
             - [참고사이트](https://mangkyu.tistory.com/177)
   - 태스크 실행과 스케줄링
