공부한거추가

--- a/스터디/토비의스프링/토비의 스프링2.md
+++ b/스터디/토비의스프링/토비의 스프링2.md
@@ -523,7 +523,7 @@
             1. 미디어 타입 결정
                 - 미디어 타입은 HTTP의 content type 에 대응
                 - 사용자의 요청정보로 사용자가 요청한 미디어 타입정보를 추출하게됨(아래 순서대로)
-                  1. URL 확장자를 가지고 결정 
+                  1. URL 확장자를 가지고 결정 (spring boot 2.x 에서 이거는 사라짐..)
                   2. 포맷 지정하는 파라미터로 미디어 타입을 결정
                        - "/hello?format=pdf" 라면, pdf 미디어 타입
                   3. Accept 헤더의 설정 이용
