공부한거 추가

--- a/스터디/토비의스프링/토비의 스프링2.md
+++ b/스터디/토비의스프링/토비의 스프링2.md
@@ -388,6 +388,7 @@
             - 이를 기반으로 관례를 잘 사용하면 뷰와 자동으로 매핑시켜줄수있음
             - /hello 라고 요청이들어왔따면, hello 라는 뷰이름으로.. /admin/user.do 라면 admin/user 라는 뷰이름으로 넘어감
           - *DispatcherServlet은 서블릿 컨테이너가 생성하고 관리하는 오브젝트이지, 스프링의 컨텍스트에서 관리하는 빈 오브젝트가 아님..! DispatcherServlet에 바로 DI해줄수는 없지만, DispatcherServlet은 서블릿 웹 애플리케이션 컨텍스트를 가지고있기때문에 이를 가지고 사용하는것임
+            - 아마 여기서 서블릿 컨테이너가 생성한다는것은, web.xml을 읽어들여서 생성하기때문에 그렇게이야기한듯.. 스프링부트일경우 서블릿 컨테이너가 생성하지않고, 생성자체는 자동설정에서 진행하고(빈 등록) 또한 DispatcherServlet에 적용하는 전략들또한 자동설정에서 진행
           - **DispatcherServlet에 적용할 전략을 선택하고 필요에 따라 확장하거나 다른 방식으로 동작하도록 설정해주는것이 스프링 MVC를 바르게 사용하는 첫걸음!
   - 컨트롤러(Controller)
     - 요청정보 추출 + 검증(+예외처리) + 적절한 타입변환(ex. multipart, 오브젝트) + 비지니스로직을 태우기위해 적절한 파싱 + 비지니스 로직의 결과에 따른 뷰 전달(ex. redirect, forward..) + 모델정보셋팅(서비스 결과 전달 or 직접 생성) (+ 상태 세션 저장)
@@ -1457,6 +1458,47 @@
       - return type을 Callable로
       - return type을 DefferedResult로(지연된 결과)
       - return type을 ResponseBodyEmitter로
+      
+<br><br><br><br>
+----
+
+  - 서블릿 컨테이너와 스프링 컨테이너 (서블릿컨텍스트, 웹어플리케이션컨텍스트)
+    - 서블릿컨테이너는 톰캣이나 제티와같은 was에서 만들게되는데, 서블릿컨테이너가 서블릿 인터페이스를 구현한놈을 호출한다.. dispatcherservlet도 서블릿을 구현한놈으로 요놈을 호출하게되는데, 여기 dispatcherservlet에 서블릿 전용 웹어플리케이션컨텍스트를 가지게되어, 이 웹어플리케이션컨텍스트에 등록된 컨트롤러 빈들을 호출할수있게된다.. (dispatcherservlet은 스프링컨테이너가 관리하진않는다) 그리고 컨트롤러에있는 빈들은 루트 웹애플리케이션컨텍스트에 등록되어있는, 실제비지니스로직을 수행하는 빈들을 호출하여 작업을 진행한다.. 
+    - 무튼 결론은 서블릿컨테이너가 디스패처서블릿을 호출하고, 디스패처서블릿에 적용할 다양한 전략과, 컨트롤러빈들을 사용할수있게해주는것은 디스패처서블릿에있는 서블릿전용 웹어플리케이션컨텍스트 라고 보면될듯.. 그리고 서블릿전용 웹어플리케이샨컨텍스트는 상위컨텍스트인 루트 웹애플리케이션컨텍스트를 사용하여 비지니스로직를 수행할수맀음
+
+    - WAS가 실행되면, servletContext를 기반으로 서블릿 컨테이너를 올리게된다.. 
+      - 이 servletContext에는 루트 웹애플리케이션컨텍스트와, 서블릿들을 등록하게된다
+        - spring mvc에서는 dispatcherServlet을 사용하게되고, 여기에 서블릿용 웹애플리케이션컨텍스트를 등록한다
+      - 서블릿용 웹애플리케이션컨텍스트는 루트웹애플리케이션컨텍스트의 자식이기때문에, 루트웹애플리케이션컨텍스트에 등록된 빈들을 참조가능하다(반대는 불가)
+      ```java
+        public interface WebApplicationInitializer{ //이거를 WAS가 호출하는듯
+          void onStartup(ServletContext servletContext) throws ServletException;
+        }
+
+        //루트 웹애플리케이션컨텍스트 등록 (onStartUp 구현부에서 진행)
+        AnnotationConfigWebApplicationContext rootContext = new AnnotationConfigWebApplicationContext(); 
+        rootContext.register(RootConfig.class); // RootConfig == root-context java config
+        servletContext.addListener(new ContextLoaderListener(rootContext));
+
+        //서블릿전용 웹애플리케이션컨텍스트 등록 (onStartUp 구현부에서 진행)
+        AnnotationConfigWebApplicationContext sac = new AnnotationConfigWebApplicationContext();
+        sac.register(WebConfig.class);
+        ServletRegistration.Dynamic dispatcher = servletContext.addServlet("appServlet", new DispatcherServlet(sac));
+        dispatcher.setLoadOnStartUp(1);
+        dispatcher.addMapping("/");
+      ``` 
+  - ServletContext?
+    - 웹 어플리케이션 내에서 서블릿들 간에 정보를 공유할수있고, 서블릿 컨테이너에 대한 정보를 추출할 수 있도록 해주는것!
+    - WAS에 등록된 웹 애플리케이션 단위로 컨텍스트가 생성.. 즉, WAS에 3개의 웹어플리케이션이있다면, 서블릿컨텍스트는 3개 (내장형 톰캣은 언제나 서블릿컨텍스트는 한개일듯..?)
+    - 그러므로 동일한 웹 애플리케이션에 존재하는 서블릿들은 동일한 ServletContext 객체를 사용
+
+  - 참고사이트
+    - [서블릿과 스프링에서 Context란?](https://linked2ev.github.io/spring/2019/09/15/Spring-5-%EC%84%9C%EB%B8%94%EB%A6%BF%EA%B3%BC-%EC%8A%A4%ED%94%84%EB%A7%81%EC%97%90%EC%84%9C-Context(%EC%BB%A8%ED%85%8D%EC%8A%A4%ED%8A%B8)%EB%9E%80/)
+    - [Spring Web MVC에서 사용하는 context들 관련 내용정리](https://live-everyday.tistory.com/m/164)
+    - [서블릿 컨테이너와 스프링 컨테이너 관련 정리 매우 굿!](https://12bme.tistory.com/555)
+    - [토비 스프링에서 설명하는 web.xml을 java 코드로 바꾸는거 잘 정리](https://joont92.github.io/spring/WebApplicationInitializer/)
+----
+  
 
 <br><br><br><br><br><br><br><br><br><br>
 - 빈들 등록하고 초기화 하는 곳..
