공부한거 추가

--- a/java/modern_java/모던자바인액션.md
+++ b/java/modern_java/모던자바인액션.md
@@ -197,3 +197,127 @@
     }
 
 ```
+
+- Part 2 - 함수형 데이터 처리
+  - 4장 스트림 소개
+    - 스트림
+      - 정의 : 데이터 처리 연산을 지원하도록 소스(ex. List)에서 추출된 연속된 요소(Sequnce of elements)
+        - 연속된 요소 : 연속된 값 집합의 인터페이스를 제공하는것은 컬렉션과 동일하나, 컬렉션은 요소 저장 및 접근 연산이 주를 이루고, 스트림은 filter, map, sorted와 같이 표현 계산식이 주를 이룸
+        - 소스 : 컬렉션, 배열, IO 자원 등의 데이터 제공 소스로부터 데이터를 소비.. 정렬된 컬렉션으로 스트림이 생성되면 정렬이 당연 그대로 유지됨
+        - 데이터 처리 연산 : 연산은 순차적으로도 가능하고 병렬적으로도 가능! 
+      - SQL 질의와 같이 명확하게 기대하는것이 무엇인지를 표현(선언형! 보이는곳에서 루프로 데이터처리를 하지않음)
+        - *선언형 코드와 동작파라미터를 잘 활용하면 변하는 요구사항에 명시적이고 빠르게 대응할수있다
+      - 병렬처리에 용이
+      - 데이터처리 (스트림)파이프라인을 만들어서 여러 연산을 가독성있게, 명확하게 볼수있다
+      - 반복자와 마찬가지로 해당 스트림은 한번 소비되면 끝이다! 스트림이 또 필요하면 다시 소스로부터 스트림을 생성해야한다! (I/O라면 소스를 반복사용할수없으므로 새로운 스트림만들수없음!)
+      - 특징요약
+        - 선언형 : 간결, 가독성 굿
+        - 조립할수있음 : 유연성 굿
+          - filter, map, flatmap 등과 같은 중간연산은 모두 Stream을 반환하고 그로인해서 파이프라인을 구성할수있음
+        - 병렬화 : 성능 굿(쉽게 병렬화가능)
+      - *스트림 vs 컬렉션
+        - 공통점
+          - 연속된 요소 형식의 값을 저장하는 자료구조의 인터페이스를 제공(자료구조에 순차적으로 접근할수있는 API 제공한다는말)
+        - 차이점
+          - 데이터를 언제 계산하느냐가 컬렉션과 스트림의 가장 큰 차이
+            - 컬렉션은 현재 자료구조가 포함하는 모든 값을 메모리에 저장해야함.. 즉, 컬렉션의 모든 요소는 컬렉션에 추가하기전에 계산되어야한다!(무언가를 미리 만들어놓고 더하거나 빼거나하니깐..)
+            - 스트림은 이론적으로 요청할때만 요소를 계산하는 고정된 자료구조! 사용자가 데이터를 요청할때만 값을 계산하기때문에 게으르게 만들어지는 컬렉션과 같음!
+          - 반복문의 차이!
+            - 컬렉션은 외부반복.. 명시적으로 컬렉션 항목을 하나씩 가져와서 처리한다(내가 직접 손대서 처리.. 병렬작업있으면 겁나 까다로움)
+            - 스트림은 내부반복을 이용하여 작업을 투명하게 병렬로 처리하거나 더 최적화된 다양한 순서로 처리!(내가 직접 손대지않는다)
+      - 스트림 이용하기
+        - 스트림 이용과정
+          - 질의를 수행할 (컬렉션 같은) ***데이터 소스***
+          - 스트림 파이프라인을 구성할 ***중간연산 연결*** (항상 스트림을 반환함)
+          - 스트림 파이프라인을 실행하고 결과를 만들 ***최종연산*** (스트림이 아닌 값을 반환함)
+          - *스트림 파이프라인은 빌더패턴과 비슷.. build가 최종연산(ex. collect, foreach..)과 같음
+  - 5장 스트림 활용
+    - 필터링
+      - filter
+      - distinct
+        - hashCode, eqauls로 같은지 확인..
+    - 스트림 슬라이싱 (java 9)
+      - 스트림의 요소를 선택하거나 스킵하도록 해줌
+      - predicate를 이용한 슬라이싱
+        - Loop를 다 돌지않고 특정 조건에 부합하지않다면 바로 끝냄 (정렬이 되어있어야 쓸수있겟지?)
+        - takeWhile(Predicate)
+          - 처음으로 거짓 마주하게되면, 그 지점에서 작업을 중단하고 그놈전까지의 요소를 반환
+        - dropWhile(Predicate)
+          - 처음으로 거짓 마주하게되면, 그 지점에서 작업을 중단하고 그놈부터 시작하여 남은 모든 요소를 반환
+      - 스트림 축소
+        - limit(n)
+          - 해당 숫자만큼 차면 바로 반환
+      - 요소 건너뛰기
+        - skip(n)
+    - 매핑
+      - map
+        - 함수를 적용한 결과가 새로운 요소로 매핑(변환 된다고 생각하면됨)
+      - flatmap
+        - 스트림을 리턴하나, 해당 스트림은 결국에 합쳐져서(평면화되어) 하나의 스트림으로 반환된다
+        - (같은말)flatMap 메서드는 스트림의 각 값을 다른 스트림으로 만든 다음에 모든 스트림을 하나의 스트림으로 연결하는기능!
+    - 검색과 매칭
+      - 특정속성이 데이터 집합에 있는지 여부를 검색하는 데이터 처리 
+      - anyMatch, allMatch, noneMatch 모두 쇼트서킷 기법을 사용
+        - *쇼트서킷 : 전체 스트림을 처리하지않더라도 결과를 반환하는것! 예를들어, and연산에서는 연산중에 하나라도 거짓이라면 다 거짓이기때문에 뒤의 계산을 굳이하지않는다.. 이것을 쇼트서킷이라함(무한한 요소를 가진 스트림을 유한한 크기로 줄일수있는 유용한 연산)
+      - findAny
+        - 이 또한 쇼트서킷을 이용하여 결과를 찾는 즉시 실행종료를 하게되는데, 반환값이 Optional\<T\>이다.
+          - 여기서 Optional은 값이 존재하지않을수도 있기떄문에 제공해주는것으로, 값이 존재하지않을때 어떻게 동작할것인지를 지정할수있다! 이를 통해 코드의 안전성을 높일수있음!
+      - findFirst
+        - 논리적인 아이템 순서가 정해져있을때, 첫번째 요소를 찾을수있다\
+        - *findAny vs findFirst
+          - 병렬실행에서는 첫번째 요소를 찾기어려움.. 반환 순서가 상관없다면 병렬스트림에서는 제약이 적은 findAny를 사용해야한다!
+    - 리듀싱
+      - 모든 스트림 요소를 처리해서 값으로 도출하는것(요소들을 더하거나 기타 연산을 하면서 줄여나가는것)
+      - 요소의 합, 최대최소 등에 쓰임
+        ```java
+            int sum=numbers.stream().reduce(0,(a,b) ->  a+b); //합계 
+            int sum=numbers.stream().reduce(0,Integer::sum); //합계.. 이렇게도 쓰임\
+
+            Optional<Integer> sum=numbers.stream().reduce((a,b) ->  a+b); //합계 (초기값 없기때문에 빈값이 들어올수있으므로 Optional)
+
+        ```
+    - *스트림연산
+      - 내부 상태없음
+        - filter, map 과 같이 내부에 상태를 갖지않는연산(넣으면 넣을수있지만, 보통의 이야기..)
+      - 내부 상태있음
+        - 한정되어있음
+          - reduce, sum, max...
+        - 한정되어있지않음
+          - distinct, sorted...
+    - 스트림 연산 문법 간략 정리
+      - ![](./operation.jpeg)
+    - 숫자형 스트림
+      - 스트림 API 숫자 스트림을 효율적으로 처리할 수 있도록 ***기본형 특화스트림***을 제공
+      - 이를 사용함으로써 박싱 비용을 피할수있을뿐아니라, sum,max등 숫자관련 리듀싱연산 수행 메서드도 제공
+      - boxed를 통해서 특화스트림을 일반스트림으로 변경할수도있음
+        ```java
+        IntStream intStream=menu.stream().mapToInt(Dish::getCalories);
+        Stream<Integer> stream=intStream.boxed();
+        ```
+      - 종류
+        - IntStream
+        - DoubleStream
+        - LongStream
+      - 숫자범위도 만들수 있음
+        ```java
+        IntStream intStream=IntStream.rangeClosed(1,100); //1과 100 포함
+        IntStream intStream=IntStream.range(1,100); //1과 100 포함x
+
+        ```
+    - 스트림 만들기
+      - 값으로 만들기
+        - Stream.of
+        - Stream.empty(); //껍데기만드는것
+      - null이 될수 있는 객체로 스트림 만들기 (java 9)
+        - Stream.ofNullable
+      - 배열로 스트림 만들기
+        - Arrays.stream
+          - 넘어오는 파라미터에 따라 숫자형스트림으로 반환할수도있음!
+      - 파일로 스트림 만들기
+        - Stream\<String\> stream=Files.Lines(파일경로);
+      - 무한스트림(언바운드스트림)
+        - 제한이 없이 계속 생성되기때문에 보통 limit과 같이 쓰임
+        - iterate
+        - generate
+          - Supplier\<T\> 를 인수로 받아서 새로운 값을 생산
+          - 병렬작업시 Supplier에는 상태값이 있으면 안전하지않다!!
